第13章_事务基础知识

--- a/mysql/高级篇/第13章_事务基础知识.md
+++ b/mysql/高级篇/第13章_事务基础知识.md
@@ -1,7 +1,8 @@
 # 第 13 章_事务基础知识
 
-
 ## 1. 数据库事务概述
+
+事务是数据库区别于文件系统的重要特性之一，当我们有了事务就会让数据库始终保持`一致性`，同时我们还能通过事务的机制`恢复到某个时间点`，这样可以保证已提交到数据库的修改不因为系统崩溃而丢失。
 
 ### 1. 1 存储引擎支持情况
 
@@ -51,6 +52,11 @@
 
   持久性是通过`事务日志`来保证的。日志包括了`重做日志`和`回滚日志`。当我们通过事务对数据进行修改的时候，首先会将数据库的变化信息记录到重做日志中，然后再对数据库中对应的行进行修改。这样做的好处是，即使数据库系统崩溃，数据库重启后也能找到没有更新到数据库系统中的重做日志，重新执行，从而使事务具有持久性。
 
+> 总结
+> ACID是事务的四大特性，在这四个特性中，原子性是基础，隔离性是手段，一致性是约束条件，而持久性是我们的目的。
+>
+> 数据库事务，其实就是数据库设计者为了方便起见，把需要保证原子性、隔离性、一致性和持久性的一个或多个数据库操作称为一个事务。
+
 ### 1. 4 事务的状态
 
 我们现在知道`事务`是一个抽象的概念，它其实对应着一个或多个数据库操作，MySQL根据这些操作所执行的不同阶段把`事务`大致划分成几个状态：
@@ -74,7 +80,7 @@
   UPDATE accounts SET money = money + 50 WHERE NAME = 'BB';
   ```
 
-- 提交的（committed）
+- **提交的（committed）**
   当一个处在`部分提交的`状态的事务将修改过的数据都`同步到磁盘`上之后，我们就可以说该事务处在了提交的状态。
 
 一个基本的状态转换图如下所示：
@@ -266,6 +272,16 @@ mysql> SELECT * FROM user;
 1 行于数据集 (0.01 秒)
 ```
 
+你能看到相同的SQL代码，只是在事务开始之前设置了SET@@completion_type=1；，结果就和我们第一次处理的一样，只有一个“张三”。这是为什么呢？
+
+这里我讲解下MySQL 中completion_type参数的作用，实际上这个参数有3种可能：
+
+1.`completion=0`，这是默认情况。当我们执行COMMIT的时候会提交事务，在执行下一个事务时，还需要使用START TRANSACTION或者BEGIN来开启。
+
+2.`completion=1`，这种情况下，当我们提交事务后，相当于执行了 COMMIT AND CHAIN，也就是开启一个链式事务，即当我们提交事务之后会开启一个相同隔离级别的事务。
+
+3.`completion=2`，这种情况下COMMIT=COMMIT ANDRELEASE，也就是当我们提交后，会自动与服务器断开连接。
+
 > 当我们设置 autocommit= 0 时，不论是否采用 START TRANSACTION 或者 BEGIN 的方式来开启事务，都需要用 COMMIT 进行提交，让事务生效，使用 ROLLBACK 对事务进行回滚。
 >
 > 当我们设置 autocommit= 1 时，每条 SQL 语句都会自动进行提交。 不过这时，如果你采用 STARTTRANSACTION 或者 BEGIN 的方式来显式地开启事务，那么这个事务只有在 COMMIT 时才会生效，在 ROLLBACK 时才会回滚。
@@ -317,15 +333,19 @@ mysql> select * from student;
 
 ### 3.2 数据并发问题
 
-针对事务的隔离性和并发性，我们怎么做取舍呢？先看一下访问相同数据的事务在`不保证串行执行`（也就是执行完一个再执行另一个）的情况下可能会出现哪些问题：
+针对事务的隔离性和并发性，我们怎么做取舍呢？先看一下访问相同数据的事务在`不保证串行执行`（也就是执行完一个再执行另一个）的情况下可能会出现哪些问题：  
 
 **1. 脏写（** `Dirty Write` **）**
 
 对于两个事务 Session A、Session B，如果事务Session A`修改了`另一个`未提交`事务Session B`修改过`的数据，那就意味着发生了`脏写`
 
+![image-20220218170107225](images/image-20220218170107225.png)
+
 **2. 脏读（** `Dirty Read` **）**
 
 对于两个事务 Session A、Session B，Session A `读取`了已经被 Session B `更新`但还`没有被提交`的字段。之后若 Session B `回滚`，Session A`读取`的内容就是`临时且无效`的。
+
+![image-20220218170323376](images/image-20220218170323376.png)
 
 Session A和Session B各开启了一个事务，Session B中的事务先将studentno列为 1 的记录的name列更新为'张三'，然后Session A中的事务再去查询这条studentno为 1 的记录，如果读到列name的值为'张三'，而Session B中的事务稍后进行了回滚，那么Session A中的事务相当于读到了一个不存在的数据，这种现象就称之为`脏读`。
 
@@ -333,14 +353,23 @@ Session A和Session B各开启了一个事务，Session B中的事务先将stude
 
 对于两个事务Session A、Session B，Session A 读取了一个字段，然后 Session B`更新`了该字段。 之后Session A`再次读取`同一个字段，`值就不同`了。那就意味着发生了不可重复读。
 
+![image-20220218170614112](images/image-20220218170614112.png)
+
 我们在Session B中提交了几个`隐式事务`（注意是隐式事务，意味着语句结束事务就提交了），这些事务都修改了studentno列为 1 的记录的列name的值，每次事务提交之后，如果Session A中的事务都可以查看到最新的值，这种现象也被称之为`不可重复读`。
 
 **4. 幻读（** `Phantom` **）**
 
 对于两个事务Session A、Session B, Session A 从一个表中`读取`了一个字段, 然后 Session B 在该表中`插入`了一些新的行。 之后, 如果 Session A `再次读取`同一个表, 就会多出几行。那就意味着发生了幻读。
 
-Session A中的事务先根据条件 studentno > 0这个条件查询表student，得到了name列值为'张三'的记录；之后Session B中提交了一个`隐式事务`，该事务向表student中插入了一条新记录；之后Session A中的事务再根据相同的条件 studentno > 0查询表student，得到的结果集中包含Session B中的事务新插入的那条记
-录，这种现象也被称之为`幻读`。我们把新插入的那些记录称之为`幻影记录`。
+![image-20220218170827832](images/image-20220218170827832.png)
+
+Session A中的事务先根据条件 studentno > 0这个条件查询表student，得到了name列值为'张三'的记录；之后Session B中提交了一个`隐式事务`，该事务向表student中插入了一条新记录；之后Session A中的事务再根据相同的条件 studentno > 0查询表student，得到的结果集中包含Session B中的事务新插入的那条记录，这种现象也被称之为`幻读`。我们把新插入的那些记录称之为`幻影记录`。
+
+**注意1：**
+有的同学会有疑问，那如果Session B中删除了一些符合studentno>e的记录而不是插入新记录，那SessionA之后再根据studentno>e的条件读取的记录变少了，这种现象算不算幻读呢？这种现象不属于幻读，幻读强调的是一个事务按照某个相同条件多次读取记录时，后读取时读到了之前没有读到的记录。
+
+**注意2：**
+那对于先前已经读到的记录，之后又读取不到这种情况，算啥？这相当于对每一条记录都发生了不可重复读的现象。幻读只是重点强调了读取到了之前读取没有获取到的记录。
 
 ### 3. 3 SQL中的四种隔离级别
 
