--- a/mysql/高级篇/第18章_主从复制.md
+++ b/mysql/高级篇/第18章_主从复制.md
@@ -4,6 +4,8 @@
 
 ### 1. 1 如何提升数据库并发能力
 
+在实际工作中，我们常常将`Redis`作为缓存与`MySQL`配合来使用，当有请求的时候，首先会从缓存中进行查找，如果存在就直接取出。如果不存在再访问数据库，这样就`提升了读取的效率`，也减少了对后端数据库的`访问压力`。Redis的缓存架构是`高并发架构`中非常重要的一环。
+
 ![image-20220211133114594](images/image-20220211133114594.png)
 
 此外，一般应用对数据库而言都是“`读多写少`”，也就说对数据库读取数据的压力比较大，有一个思路就是采用数据库集群的方案，做`主从架构`、进行`读写分离`，这样同样可以提升数据库的并发处理能力。但并不是所有的应用都需要对数据库进行主从架构的设置，毕竟设置架构本身是有成本的。
@@ -18,9 +20,21 @@
 
 ![image-20220211133224805](images/image-20220211133224805.png)
 
-**第 2 个作用就是数据备份。**
+其中一个是Master主库，负责写入数据，我们称之为：写库。
 
-**第 3 个作用是具有高可用性。**
+其它都是Slave从库，负责读取数据，我们称之为：读库。
+
+当主库进行更新的时候，会自动将数据复制到从库中，而我们在客户端读取数据的时候，会从从库中进行读取。
+
+面对“`读多写少`”的需求，采用读写分离的方式，可以实现`更高的并发访问`。同时，我们还能对从服务器进行`负载均衡`，让不同的读请求按照策略均匀地分发到不同的从服务器上，让`读取更加顺畅`。读取顺畅的另一个原因，就是`减少了锁表`的影响，比如我们让主库负责写，当主库出现写锁的时候，不会影响到从库进行SELECT的读取。
+
+**第 2 个作用就是数据备份。**我们通过主从复制将主库上的数据复制到了从库上，相当于是一种热备份机制，也就是在主库正常运行的情况下进行的备份，不会影响到服务。
+
+**第3个作用是具有高可用性**。数据备份实际上是一种冗余的机制，通过这种冗余的方式可以换取数据库的高可用性，也就是当服务器出现`故障`或`宕机`的情况下，可以`切换`到从服务器上，保证服务的正常运行。
+
+关于高可用性的程度，我们可以用一个指标衡量，即正常可用时间/全年时间。比如要达到全年99.999%的时间都可用，就意味着系统在一年中的不可用时间不得超过`365*24*60*（1-99.999%）=5.256`分钟（含系统崩溃的时间、日常维护操作导致的停机时间等），其他时间都需要保持可用的状态。
+
+实际上，更高的高可用性，意味着需要付出更高的成本代价。在现实中我们需要结合业务需求和成本来进行选择。
 
 ## 2. 主从复制的原理
 
@@ -44,9 +58,15 @@
 
 ![image-20220211133403943](images/image-20220211133403943.png)
 
+> 注意：
+>
+> 不是所有版本的MySQL都默认开启服务器的二进制日志。在进行主从同步的时候，我们需要先检查服务器是否已经开启了二进制日志。
+>
+> 除非特殊指定，默认情况下从服务器会执行所有主服务器中保存的事件。也可以通过配置，使从服务器执行特定的事件。
+
 **复制三步骤**
 
-步骤 1 ：`Master`将写操作记录到二进制日志（`binlog`）。
+步骤 1 ：`Master`将写操作记录到二进制日志（`binlog`）。这些记录叫做**二进制日志事件**（binary log events）；
 
 步骤 2 ：`Slave`将`Master`的binary log events拷贝到它的中继日志（`relay log`）；
 
@@ -218,8 +238,7 @@ MySQL会根据执行的每一条具体的sql语句来区分对待记录的日志
 
 ```mysql
 #在主机MySQL里执行授权主从复制的命令
-GRANT REPLICATION SLAVE ON *.* TO 'slave1'@'从机器数据库IP' IDENTIFIED BY 'abc123';
-#5.5,5.
+GRANT REPLICATION SLAVE ON *.* TO 'slave1'@'从机器数据库IP' IDENTIFIED BY 'abc123';#5.5,5.7
 ```
 
 **注意：如果使用的是MySQL8，需要如下的方式建立账户，并授权slave：**
@@ -379,7 +398,29 @@ INSERT INTO mytbl VALUES( 2 ,@@hostname);
 
 ### 4. 1 理解主从延迟问题
 
-进行主从同步的内容是二进制日志，它是一个文件，在进行`网络传输`的过程中就一定会`存在主从延迟`（比如 500 ms），这样就可能造成用户在从库上读取的数据不是最新的数据，也就是主从同步中的数据不一致性问题。
+进行主从同步的内容是二进制日志，它是一个文件，在进行`网络传输`的过程中就一定会`存在主从延迟`（比如 500 ms），这样就可能造成用户在从库上读取的数据不是最新的数据，也就是主从同步中的`数据不一致性`问题。
+
+**举例**：导致主从延迟的时间点主要包括以下三个：
+
+1. 主库A执行完成一个事务，写入binlog，我们把这个时刻记为T1；
+
+2. 之后传给从库B，我们把从库B接收完这个binlog的时刻记为T2；
+
+3. 从库B执行完成这个事务，我们把这个时刻记为T3。
+
+所谓主从延迟，就是同一个事务，在从库执行完成的时间和主库执行完成的时间之间的差值，也就是T3-T1。
+
+在从库上执行`show slave status命`令，它的返回结果里面会显示`seconds_behind_master`，用于表示当前主从延迟的值，这个值的时间精度是秒。
+
+seconds_behind_master的计算方法是这样的：
+
+1. 每个事务的binlog里面都有一于润字段，用于记录主库上写入的时间；
+
+2. 备库取出当前正在执行的事务的时间字段的值，计算它与当前系统时间的差值，得到seconds_behind_master。其实seconds_behind_master这个参数计算的就是T3-T1。
+
+你可能会问，如果主从库机器的系统时间设置不一致，会不会导致主从延迟的值不准？
+
+不会！因为，从库连接到主库的时候，会通过执行 `SELECT UNIX_TIMESTAMP（）`函数来获得当前主库的系统时间。如果这时候发现主库的系统时间与自己不一致，从库在执行seconds_behind_master计算的时候会自动扣掉这个差值。
 
 ### 4. 2 主从延迟问题原因
 
@@ -389,20 +430,31 @@ INSERT INTO mytbl VALUES( 2 ,@@hostname);
 
 1 、从库的机器性能比主库要差
 
+> 比如将20台主库放在4台机器，把从库放在一台机器。这个时候进行更新操作，由于更新时会触发大量读操作，导致从库机器上的多个从库争夺资源，导致主从延迟。
+
+不过，目前大部分部署都是采取主从使用相同规格的机器部署。
+
 2 、从库的压力大
+
+> 按照正常的策略，读写分离，主库提供写能力，从库提供读能力。将进行大量查询放在从库上，结果导致从库上耗费了大量的CPU资源，进而影响了同步速度，造成主从延迟。
 
 3 、大事务的执行
 
+一旦执行大事务，那么主库必须要等到事务完成之后才会写入binlog。
 
-**举例 1 ：** 一次性用delete语句删除太多数据
+**举例1**：一次性用delete语句删除太多数据
+
+比如，一些归档类的数据，平时没有注意删除历史数据，等到空间快满了，业务开发人员要一次性地删掉大量历史数据。同时，又因为要避免在高峰期操作会影响业务，所以会在晚上执行这些大量数据的删除操作。结果，负责的DBA半夜就会收到延迟报警。
 
 结论：后续再删除数据的时候，要控制每个事务删除的数据量，分成多次删除。
 
-**举例 2 ：** 一次性用insert...select插入太多数据
+**举例2**：一次性用insert..select插入太多数据
 
-**举例: 3 ：** 大表DDL
+主库执行了一条insert..select非常大的插入操作，该操作产生了几十6的binlog文件传输到只读节点，进而导致了只读节点出现应用binlog延迟。
 
-比如在主库对一张500W的表添加一个字段耗费了 10 分钟，那么从节点上也会耗费 10 分钟。
+**举例3**：大表DDL
+
+比如在主库对一张500W的表添加一个字段耗费了10分钟，那么从节点上也会耗费10分钟。
 
 ### 4. 3 如何减少主从延迟
 
@@ -412,8 +464,7 @@ INSERT INTO mytbl VALUES( 2 ,@@hostname);
 
 2. 优化SQL，避免慢SQL，`减少批量操作`，建议写脚本以update-sleep这样的形式完成。
 3. `提高从库机器的配置`，减少主库写binlog和从库读binlog的效率差。
-4. 尽量采用`短的链路`，也就是主库和从库服务器的距离尽量要短，提升端口带宽，减少binlog传输
-的网络延时。
+4. 尽量采用`短的链路`，也就是主库和从库服务器的距离尽量要短，提升端口带宽，减少binlog传输的网络延时。
 5. 实时性要求的业务读强制走主库，从库只做灾备，备份。
 
 ### 4. 4 如何解决一致性问题
@@ -426,9 +477,17 @@ INSERT INTO mytbl VALUES( 2 ,@@hostname);
 
 #### 方法 1 ：异步复制
 
+异步模式就是客户端提交COMMIT之后不需要等从库返回任何结果，而是直接将结果返回给客户端，这样做的好处是不会影响主库写的效率，但可能会存在主库宕机，而Binlog还没有同步到从库的情况，也就是此时的主库和从库数据不一致。这时候从从库中选择一个作为新主，那么新主则可能缺少原来主服务器中已提交的事务。所以，这种复制模式下的数据一致性是最弱的。
+
 ![image-20220211135529120](images/image-20220211135529120.png)
 
 #### 方法 2 ：半同步复制
+
+MySQL5.5版本之后开始支持半同步复制的方式。原理是在客户端提交COMMIT之后不直接将结果返回给客户端，而是等待至少有一个从库接收到了Binlog，并且写入到中继日志中，再返回给客户端。
+
+这样做的好处就是提高了数据的一致性，当然相比于异步复制来说，至少多增加了一个网络连接的延迟，降低了主库写的效率。
+
+在MySQL5.7版本中还增加了一个`rpl_semi_sync_master_wait_for_slave_count`参数，可以对应答的从库数量进行设置，默认为`1`，也就是说只要有1个从库进行了响应，就可以返回给客户端。如果将这个参数调大，可以提升数据一致性的强度，但也会增加主库等待从库响应的时间。
 
 ![image-20220211135535500](images/image-20220211135535500.png)
 
@@ -476,8 +535,8 @@ MGR 将 MySQL 带入了数据强一致性的时代，是一个划时代的创新
 
 ![image-20220211135859963](images/image-20220211135859963.png)
 
-主动切换
+- 主动切换
 
-被动切换
+- 被动切换
 
-如何判断主库出问题了？如何解决过程中的数据不一致性问题？
+- 如何判断主库出问题了？如何解决过程中的数据不一致性问题？
