--- a/mysql/高级篇/第19章_数据库备份与恢复.md
+++ b/mysql/高级篇/第19章_数据库备份与恢复.md
@@ -955,8 +955,13 @@ mysql> select * from account;
 3 rows in set (0.00 sec)
 ```
 
-
 ## 7. 数据库迁移
+
+数据迁移（data migration）是指选择、准备、提取和转换数据，并**将数据从一个计算机存储系统永久地传输到另一个计算机存储系统的过程**。此外，`验证迁移数据的完整性`和`退役原来旧的数据存储`，也被认为是整个数据迁移过程的一部分。
+
+数据库迁移的原因是多样的，包括服务器或存储设备更换、维护或升级，应用程序迁移，网站集成，灾难恢复和数据中心迁移。
+
+根据不同的需求可能要采取不同的迁移方案，但总体来讲，MySQL数据迁移方案大致可以分为物理迁移和逻辑迁移两类。通常以尽可能自动化的方式执行，从而将人力资源从繁琐的任务中解放出来。
 
 ### 7. 1 概述
 
@@ -1030,6 +1035,18 @@ mysql –h host2 –uroot –p
 
 ### 8.1 delete：误删行
 
+如果是使用delete语句误删了数据行，可以用Flashback工具通过闪回把数据恢复回来。
+
+Flashback恢复数据的原理，是修改binlog的内容，拿回原库重放。而能够使用这个方案的前提是，需要确保binlog_format=row和binlog_row_image=FULL。
+
+具体恢复数据时，对单个事务做如下处理：
+
+1. 对于insert语句，对应的binlog event类型是Write_rows event，把它改成Delete_rows event即可；
+2. 同理，对于delete语句，也是将Delete_rows event改为Writerows event；
+3. 而如果是Update_rows的话，binlog里面记录了数据行修改前和修改后的值，对调这两行的位置即可。
+
+
+
 **经验之谈：**
 
 1. 恢复数据比较安全的做法，是`恢复出一个备份`，或者找一个从库作为`临时库`，在这个临时库上执行这些操作，然后再将确认过的临时库的数据，恢复回主库。如果直接修改主库，可能导致对数据的`二次破坏`。
@@ -1043,6 +1060,11 @@ mysql –h host2 –uroot –p
    2. 代码上线前，必须经过`SQL审计`。
 
 ### 8.2 truncate/drop ：误删库/表
+
+**背景：**
+delete全表是很慢的，需要生成回滚日志、写redo、写binlog。所以，从性能角度考虑，优先考虑使用truncate I table或者drop table命令。
+
+使用delete命令删除的数据，你还可以用Flashback来恢复。而使用truncate/drop table和drop database命令删除的数据，就没办法通过Flashback来恢复了。因为，即使我们配置了binlog_format=row，执行这三个命令时，记录的binlog还是statement格式。binlog里面就只有一个truncate/drop语句，这些信息是恢复不出数据的。
 
 **方案：**
 
