--- a/mysql/高级篇/第08章_索引的创建与设计原则.md
+++ b/mysql/高级篇/第08章_索引的创建与设计原则.md
@@ -345,12 +345,11 @@ CREATE TABLE ts1(a int,b int,index idx_a_b(a,b desc));
 DELIMITER //
 CREATE PROCEDURE ts_insert()
 BEGIN
-DECLARE i INT DEFAULT 1 ;
-WHILE i < 800
-DO
-insert into ts1 select rand()* 80000 ,rand()* 80000 ;
-SET i = i + 1 ;
-END WHILE;
+	DECLARE i INT DEFAULT 1 ;
+	WHILE i < 800 DO
+        insert into ts1 select rand()* 80000 ,rand()* 80000 ;
+        SET i = i + 1 ;
+	END WHILE;
 commit;
 END //
 DELIMITER ;
@@ -552,8 +551,7 @@ CREATE TABLE `course` (
 ```mysql
 #函数 1 ：创建随机产生字符串函数
 DELIMITER //
-CREATE FUNCTION rand_string(n INT)
-	RETURNS VARCHAR( 255 ) #该函数会返回一个字符串
+CREATE FUNCTION rand_string(n INT) RETURNS VARCHAR( 255 ) #该函数会返回一个字符串
 BEGIN
 	DECLARE chars_str VARCHAR( 100 ) DEFAULT 'abcdefghijklmnopqrstuvwxyzABCDEFJHIJKLMNOPQRSTUVWXYZ';
 	DECLARE return_str VARCHAR( 255 ) DEFAULT '';
@@ -702,7 +700,7 @@ SELECT student_id,count(*)as num FROM student_info group by student_id limit 100
 
 同样，如果是ORDER BY，也需要对字段创建索引。
 
-如果同时有GROUPBY和ORDERBY的情况：比如我们按照student_id进行分组，同时按照创建时间降序的方式进行排序，这时我们就需要同时进行GROUPBY和ORDER BY，那么是不是需要单独创建student_id的索引和create_time的索引呢？
+如果同时有GROUP BY和ORDER BY的情况：比如我们按照student_id进行分组，同时按照创建时间降序的方式进行排序，这时我们就需要同时进行GROUP BY和ORDER BY，那么是不是需要单独创建student_id的索引和create_time的索引呢？
 
 当我们对student_id和create_time`分别创建索引`，执行下面的SQL查询：
 
@@ -878,7 +876,7 @@ SELECT * FROM shop ORDER BY address LIMIT 12;
 
 #### 1. 在where中使用不到的字段，不要设置索引
 
-WHERE条件（包括GROUPBY、ORDERBY）里用不到的字段不需要创建索引，索引的价值是快速定位，如果起不到定位的字段通常是不需要创建索引的。举个例子：
+WHERE条件（包括GROUP BY、ORDER BY）里用不到的字段不需要创建索引，索引的价值是快速定位，如果起不到定位的字段通常是不需要创建索引的。举个例子：
 
 ```mysql
 SELECT course_id,student_id,create_time FROM student_info WHERE student_id=41251;
