--- a/mysql/高级篇/第13章_事务基础知识.md
+++ b/mysql/高级篇/第13章_事务基础知识.md
@@ -87,6 +87,8 @@
 
 ![image-20220210170302844](images/image-20220210170302844.png)
 
+图中可见，只有当事务处于`提交的`或者`中止的`状态时，一个事务的生命周期才算是结束了。对于已经提交的事务来说，该事务对数据库所做的修改将永久生效，对于处于中止状态的事务，该事务对数据库所做的所有修改都会被回滚到没执行该事务之前的状态。
+
 ## 2. 如何使用事务
 
 使用事务有两种方式，分别为`显式事务`和`隐式事务`。
@@ -103,9 +105,11 @@ mysql> START TRANSACTION;
 
 `START` `TRANSACTION`语句相较于`BEGIN`特别之处在于，后边能跟随几个`修饰符`：
 
-① `READ ONLY`：标识当前事务是一个只读事务，也就是属于该事务的数据库操作只能读取数据，而不能修改数据。
+① `READ ONLY`：标识当前事务是一个`只读事务`，也就是属于该事务的数据库操作只能读取数据，而不能修改数据。
 
-② `READ WRITE`：标识当前事务是一个读写事务，也就是属于该事务的数据库操作既可以读取数据，也可以修改数据。
+> 补充：只读事务中只是不允许修改那些其他事务也能访问到的表中的数据，对于临时表来说（我们使用CREATE TMEPORARY TABLE创建的表），由于它们只能在当前会话中可见，所以只读事务其实也是可以对临时表进行增、删、改操作的。
+
+② `READ WRITE`：标识当前事务是一个`读写事务`，也就是属于该事务的数据库操作既可以读取数据，也可以修改数据。
 
 ③ `WITH CONSISTENT SNAPSHOT`：启动一致性读。
 
@@ -125,6 +129,8 @@ mysql> ROLLBACK;
 # 将事务回滚到某个保存点。
 mysql> ROLLBACK TO [SAVEPOINT]
 ```
+
+![image-20220311172644556](images/image-20220311172644556.png)
 
 ### 2. 2 隐式事务
 
@@ -156,18 +162,32 @@ mysql> SHOW VARIABLES LIKE 'autocommit';
 
 - 数据定义语言（Data definition language，缩写为：DDL）
 
+  ![image-20220311173214689](images/image-20220311173214689.png)
+
 - 隐式使用或修改mysql数据库中的表
+
+  ![image-20220311173202556](images/image-20220311173202556.png)
 
 - 事务控制或关于锁定的语句
   ① 当我们在一个事务还没提交或者回滚时就又使用`START TRANSACTION`或者`BEGIN`语句开启了另一个事务时，会隐式的提交上一个事务。即：
+
+  ![image-20220311173252936](images/image-20220311173252936.png)
+
   ② 当前的`autocommit`系统变量的值为`OFF`，我们手动把它调为`ON`时，也会`隐式的提交`前边语句所属的事务。
 
   ③ 使用`LOCK TABLES`、`UNLOCK TABLES`等关于锁定的语句也会`隐式的提交`前边语句所属的事务。
 
 - 加载数据的语句
 
+  使用`LOAD DATA`语句来批量往数据库中导入数据时，也会`隐式的提交`前边语句所属的事务。
+
 - 关于MySQL复制的一些语句
+
+  ![image-20220311173335194](images/image-20220311173335194.png)
+
 - 其它的一些语句
+
+  ![image-20220311173344531](images/image-20220311173344531.png)
 
 ### 2. 4 使用举例 1 ：提交与回滚
 
@@ -272,29 +292,81 @@ mysql> SELECT * FROM user;
 1 行于数据集 (0.01 秒)
 ```
 
-你能看到相同的SQL代码，只是在事务开始之前设置了SET@@completion_type=1；，结果就和我们第一次处理的一样，只有一个“张三”。这是为什么呢？
+你能看到相同的SQL代码，只是在事务开始之前设置了`SET@@completion_type=1；`，结果就和我们第一次处理的一样，只有一个“张三”。这是为什么呢？
 
 这里我讲解下MySQL 中completion_type参数的作用，实际上这个参数有3种可能：
 
-1.`completion=0`，这是默认情况。当我们执行COMMIT的时候会提交事务，在执行下一个事务时，还需要使用START TRANSACTION或者BEGIN来开启。
+1.`completion=0`，这是默认情况。当我们执行COMMIT的时候会提交事务，在执行下一个事务时，还需要使用`START TRANSACTION`或者`BEGIN`来开启。
 
-2.`completion=1`，这种情况下，当我们提交事务后，相当于执行了 COMMIT AND CHAIN，也就是开启一个链式事务，即当我们提交事务之后会开启一个相同隔离级别的事务。
+2.`completion=1`，这种情况下，当我们提交事务后，相当于执行了 `COMMIT AND CHAIN`，也就是开启一个链式事务，即当我们提交事务之后会开启一个相同隔离级别的事务。
 
-3.`completion=2`，这种情况下COMMIT=COMMIT ANDRELEASE，也就是当我们提交后，会自动与服务器断开连接。
+3.`completion=2`，这种情况下`COMMIT=COMMIT AND RELEASE`，也就是当我们提交后，会自动与服务器断开连接。
 
 > 当我们设置 autocommit= 0 时，不论是否采用 START TRANSACTION 或者 BEGIN 的方式来开启事务，都需要用 COMMIT 进行提交，让事务生效，使用 ROLLBACK 对事务进行回滚。
 >
-> 当我们设置 autocommit= 1 时，每条 SQL 语句都会自动进行提交。 不过这时，如果你采用 STARTTRANSACTION 或者 BEGIN 的方式来显式地开启事务，那么这个事务只有在 COMMIT 时才会生效，在 ROLLBACK 时才会回滚。
+> 当我们设置 autocommit= 1 时，每条 SQL 语句都会自动进行提交。 不过这时，如果你采用 START TRANSACTION 或者 BEGIN 的方式来显式地开启事务，那么这个事务只有在 COMMIT 时才会生效，在 ROLLBACK 时才会回滚。
 
 
 
 ### 2.5 使用举例 2 ：测试不支持事务的engine
 
-见视频讲解（ **https://www.bilibili.com/video/BV1iq4y1u7vj?from=search&seid=4297501441472622157&spm_id_from=333.337.0.0** ）
+```mysql
+CREATE TABLE test1(i INT) ENGINE = INNODB;
+
+CREATE TABLE test2(i INT) ENGINE = MYISAM;
+
+#针对于innodb表
+BEGIN
+INSERT INTO test1 VALUES (1);
+ROLLBACK;
+
+SELECT * FROM test1;
+
+
+#针对于myisam表:不支持事务
+BEGIN
+INSERT INTO test2 VALUES (1);
+ROLLBACK;
+
+SELECT * FROM test2;
+```
+
+
 
 ### 2.6 使用举例 3 ：SAVEPOINT
 
-见视频讲解（ **https://www.bilibili.com/video/BV1iq4y1u7vj?from=search&seid=4297501441472622157&spm_id_from=333.337.0.0** ）
+```mysql
+#举例3：体会savepoint
+
+CREATE TABLE user3(NAME VARCHAR(15),balance DECIMAL(10,2));
+
+BEGIN
+INSERT INTO user3(NAME,balance) VALUES('张三',1000);
+COMMIT;
+
+SELECT * FROM user3;
+
+
+BEGIN;
+UPDATE user3 SET balance = balance - 100 WHERE NAME = '张三';
+
+UPDATE user3 SET balance = balance - 100 WHERE NAME = '张三';
+
+SAVEPOINT s1;#设置保存点
+
+UPDATE user3 SET balance = balance + 1 WHERE NAME = '张三';
+
+ROLLBACK TO s1; #回滚到保存点
+
+
+SELECT * FROM user3;
+
+ROLLBACK; #回滚操作
+
+SELECT * FROM user3;
+```
+
+
 
 ## 3. 事务隔离级别
 
@@ -340,6 +412,8 @@ mysql> select * from student;
 对于两个事务 Session A、Session B，如果事务Session A`修改了`另一个`未提交`事务Session B`修改过`的数据，那就意味着发生了`脏写`
 
 ![image-20220218170107225](images/image-20220218170107225.png)
+
+Session A和Session B各开启了一个事务，Session B中的事务先将studentno列为1的记录的name列更新为李四，然后SessionA中的事务接着又把这条studentno列为1的记录的name列更新为张三。如果之后SessionB中的事务进行了回滚，那么SessionA中的更新也将不复存在，这种现象就称之为脏写。这时SessionA中的事务就没有效果了，明明把数据更新了，最后也提交事务了，最后看到的数据什么变化也没有。这里大家对事务的隔离级比较了解的话，会发现默认隔离级别下，上面SessionA中的更新语句会处于等待状态，这里只是跟大家说明一下会出现这样现象。
 
 **2. 脏读（** `Dirty Read` **）**
 
@@ -476,6 +550,8 @@ SET [GLOBAL|SESSION] TRANSACTION_ISOLATION = '隔离级别'
   - 如果在事务之间执行，则对后续的事务有效
   - 该语句可以在已经开启的事务中间执行，但不会影响当前正在执行的事务
 
+如果在服务器启动时想改变事务的默认隔离级别，可以修改启动参数`transaction_isolation`的值。比如，在启动服务器时指定了 `transaction_isolation=SERIALIZABLE`，那么事务的默认隔离级别就从原来的`REPEATABLE-READ` 变成了 `SERIALIZABLE`。
+
 > 小结：
 >
 > 数据库规定了多种事务隔离级别，不同隔离级别对应不同的干扰程度，隔离级别越高，数据一致性就越好，但并发性越弱。
@@ -483,6 +559,16 @@ SET [GLOBAL|SESSION] TRANSACTION_ISOLATION = '隔离级别'
 
 
 ### 3. 6 不同隔离级别举例
+
+```mysql
+CREATE TABLE account(
+	id INT PRIMARY KEY AUTO_INCREMENT,
+	NAME VARCHAR(15),
+	balance DECIMAL(10,2)
+);
+INSERT INTO account VALUES(1,'张三','100'),(2,'李四','0');
+
+```
 
 **演示 1. 读未提交之脏读**
 
@@ -498,6 +584,8 @@ SET [GLOBAL|SESSION] TRANSACTION_ISOLATION = '隔离级别'
 
 ![image-20220210172913001](images/image-20220210172913001.png)
 
+**演示3：可重复读**
+
 设置隔离级别为可重复读，事务的执行流程如下：
 
 ![image-20220210172925240](images/image-20220210172925240.png)
@@ -506,7 +594,17 @@ SET [GLOBAL|SESSION] TRANSACTION_ISOLATION = '隔离级别'
 
 ![image-20220210172935534](images/image-20220210172935534.png)
 
+这里要灵活的`理解读取`的意思，第一次select是读取，第二次的insert其实也属于隐式的读取，只不过是在mysql的机制中读取的，插入数据也是要先读取一下有没有主键冲突才能决定是否执行插入。
 
+幻读，并不是说两次读取获取的结果集不同，幻读侧重的方面是某一次的select操作得到的结果所表征的数据状态无法支撑后续的业务操作。更为具体一些：select某记录是否存在，不存在，准备插入此记录，但执行insert时发现此记录已存在，无法插入，此时就发生了幻读。
+
+在RR隔离级别下，step1、step2是会正常执行的，step3则会报错主键冲突，对于事务1的业务来说是执行失败的，这里事务1就是发生了幻读，因为事务1在step1中读取的数据状态并不能支撑后续的业务操作，事务1：“见鬼了，我刚才读到的结果应该可以支持我这样操作才对啊，为什么现在不可以”。事务1不敢相信的又执行了step4，发现和setp1读取的结果是一样的（RR下的MVCC机制）。此时，幻读无疑已经发生，事务1无论读取多少次，都查不到id=3的记录，但它的确无法插入这条他通过读取来认定不存在的记录（此数据已被事务2插入），对于事务1来说，它幻读了。
+
+其实RR也是可以避免幻读的，通过对select 操作手动加`行X锁（独占锁）`（SELECT.…FOR UPDATE这也正是SERIALIZABLE隔离级别下会隐式为你做的事情）。同时，即便当前记录不存在，比如id=3是不存在的，当前事务也会获得一把记录锁（因为lnnoDB的行锁锁定的是索引，故记录实体存在与否没关系，存在就加`行X锁`，不存在就加`间隙锁`），其他事务则无法插入此索引的记录，故杜绝了幻读。
+
+在`SERIALIZABLE 隔离级别`下，step1执行时是会隐式的添加`行（X）锁/gap（X）锁`的，从而step2会被阻塞，step3会正执行，待事务1提交后，事务2才能继续执行（主键冲突执行失败），对于事务1来说业务是正确的，成功的阻塞扼杀了扰乱业务的事务2，对于事务1来说他前期读取的结果是可以支撑其后续业务的。
+
+所以MySQL的幻读并非什么读取两次返回结果集不同，而是事务在插入事先检测不存在的记录时，惊奇的发现这些数据已经存在了，之前的检测读获取到的数据如同鬼影一般。
 
 ## 4. 事务的常见分类
 
@@ -517,3 +615,24 @@ SET [GLOBAL|SESSION] TRANSACTION_ISOLATION = '隔离级别'
 - 链事务（Chained Transactions）
 - 嵌套事务（Nested Transactions）
 - 分布式事务（Distributed Transactions）
+
+ 下面分别介绍这几种类型：
+
+1）`扁平事务`是事务类型中最简单的一种，但是在实际生产环境中，这可能是使用最频繁的事务，在扁平事务中，所有操作都处于同一层次，其由BEGIN WORK开始，由COMMIT WORK或ROLLBACK WORK结束，其间的操作是原子的，要么都执行，要么都回滚，因此，扁平事务是应用程序成为原子操作的基本组成模块。扁平事务虽然简单，但是在实际环境中使用最为频繁，也正因为其简单，使用频繁，故每个数据库系统都实现了对扁平事务的支持。扁平事务的主要限制是不能提交或者回滚事务的某一部分，或分几个步骤提交。
+扁平事务一般有三种不同的结果：①事务成功完成。在平常应用中约占所有事务的96%。②应用程序要求停止事务。比如应用程序在捕获到异常时会回滚事务，约占事务的3%。③外界因素强制终止事务。如连接超时或连接断开，约占所有事务的1%。
+
+2）`带有保存点的扁平事务`除了支持扁平事务支持的操作外，还允许在事务执行过程中回滚到同一事务中较早的一个状态。这是因为某些事务可能在执行过程中出现的错误并不会导致所有的操作都无效，放弃整个事务不合乎要求，开销太大。
+
+`保存点（Savepoint）`用来通知事务系统应该记住事务当前的状态，以便当之后发生错误时，事务能回到保存点当时的状态。对于扁平的事务来说，隐式的设置了一个保存点，然而在整个事务中，只有这一个保存点，因此，回滚只能会滚到事务开始时的状态。
+
+3）`链事务`是指一个事务由多个子事务链式组成，它可以被视为保存点模式的一个变种。带有保存点的扁平事务，当发生系统崩溃时，所有的保存点都将消失，这意味着当进行恢复时，事务需要从开始处重新执行，而不能从最近的一个保存点继续执行。`链事务的思想`是：在提交一个事务时，释放不需要的数据对象，将必要的处理上下文隐式地传给下一个要开始的事务，前一个子事务的提交操作和下一个子事务的开始操作合并成一个原子操作，这意味着下一个事务将看到上一个事务的结果，就好像在一个事务中进行一样。这样，**在提交子事务时就可以释放不需要的数据对象，而不必等到整个事务完成后才释放**。其工作方式如下：
+
+![image-20220311175601819](images/image-20220311175601819.png)
+
+链事务与带有保存点的扁平事务的不同之处体现在：
+①带有保存点的扁平事务能回滚到任意正确的保存点，而链事务中的回滚仅限于当前事务，即只能恢复到最近的一个保存点。
+②对于锁的处理，两者也不相同，链事务在执行COMMIT后即释放了当前所持有的锁，而带有保存点的扁平事务不影响迄今为止所持有的锁。
+4）`嵌套事务`是一个层次结构框架，由一个顶层事务（Top-Level Transaction）控制着各个层次的事务，顶层事务之下嵌套的事务被称为子事务（Subtransaction），其控制着每一个局部的变换，子事务本身也可以是嵌套事务。
+因此，嵌套事务的层次结构可以看成是一棵树。
+
+5）`分布式事务`通常是在一个分布式环境下运行的扁平事务，因此，需要根据数据所在位置访问网络中不同节点的数据库资源。例如，一个银行用户从招商银行的账户向工商银行的账户转账1000元，这里需要用到分布式事务，因为不能仅调用某一家银行的数据库就完成任务。
