--- a/mysql/高级篇/第15章_锁.md
+++ b/mysql/高级篇/第15章_锁.md
@@ -12,25 +12,36 @@
 
 并发事务访问相同记录的情况大致可以划分为 3 种：
 
-## 2. 1 读-读情况
+### 2. 1 读-读情况
 
 `读-读`情况，即并发事务相继`读取相同的记录`。读取操作本身不会对记录有任何影响，并不会引起什么问题，所以允许这种情况的发生。
 
-## 2. 2 写-写情况
+###  2. 2 写-写情况
 
 `写-写`情况，即并发事务相继对相同的记录做出改动。
 
 在这种情况下会发生`脏写`的问题，任何一种隔离级别都不允许这种问题的发生。所以在多个未提交事务相继对一条记录做改动时，需要让它们`排队执行`，这个排队的过程其实是通过`锁`来实现的。这个所谓的锁其实是一个`内存中的结构`，在事务执行前本来是没有锁的，也就是说一开始是没有`锁结构`和记录进行关联的，如图所示：
 
-![image-20220210194127987](images/image-20220210194127987.png)
+<img src="images/image-20220210194127987.png" alt="image-20220210194127987" style="zoom: 50%;" />
 
 当一个事务想对这条记录做改动时，首先会看看内存中有没有与这条记录关联的`锁结构`，当没有的时候就会在内存中生成一个`锁结构`与之关联。比如，事务`T1`要对这条记录做改动，就需要生成一个`锁结构`与之关联：
 
-![image-20220210194202481](images/image-20220210194202481.png)
+<img src="images/image-20220210194202481.png" alt="image-20220210194202481" style="zoom: 50%;" />
 
-![image-20220210194209764](images/image-20220210194209764.png)
+在`锁结构`里有很多信息，为了简化理解，只把两个比较重要的属性拿了出来：
 
-![image-20220210194215872](images/image-20220210194215872.png)
+- `trx信息`：代表这个锁结构是哪个事务生成的。
+- `is_waiting`：代表当前事是否在等待。
+
+当事务`T1`改动了这条记录后，就生成了一个`锁结构`与该记录关联，因为之前没有别的事务为这条记录加锁，所以`is_waiting` 属性就是fa`l`se，我们把这个场景就称之为`获取锁成功`，或者`加锁成功`，然后就可以继续执行操作了。
+
+在事务`T1`提交之前，另一个事务`T2`也想对该记录做改动，那么先看看有没有`锁结构`与这条记录关联，发现有一个`锁结构`与之关联后，然后也生成了一个锁结构与这条记录关联，不过锁结构的`is_waiting` 属性值为`true`，表示当前事务需要等待，我们把这个场景就称之为`获取锁失败`，或者`加锁失败`，图示：
+
+<img src="images/image-20220210194209764.png" alt="image-20220210194209764" style="zoom: 80%;" />
+
+在事务T1提交之后，就会把该事务生成的`锁结构释放`掉，然后看看还有没有别的事务在等待获取锁，发现了事务T2还在等待获取锁，所以把事务`T2`对应的锁结构的`is_waiting`属性设置为`false`，然后把该事务对应的线程唤醒，让它继续执行，此时事务T2就算获取到锁了。效果图就是这样：
+
+<img src="images/image-20220210194215872.png" alt="image-20220210194215872" style="zoom: 80%;" />
 
 小结几种说法：
 
@@ -58,6 +69,8 @@
 
 - 方案一：读操作利用多版本并发控制（`MVCC`，下章讲解），写操作进行`加锁`。
 
+  所谓的`MVCC`，就是生成一个`ReadView`，通过ReadView找到符合条件的记录版本（历史版本由`undo日志`构建）。查询语句只能`读`到在生成ReadView之前`已提交事务所做的更改`，在生成ReadView之前未提交的事务或者之后才开启的事务所做的更改星看不到的。而`写操作`肯定针对的是`最新版本的记录`，读记录的历史版本和改动记录的最新版本本身并不冲突，也就是采用MVCC时，`读-写`操作并不冲突。
+
   > 普通的SELECT语句在READ COMMITTED和REPEATABLE READ隔离级别下会使用到MVCC读取记录。
   >
   > - 在`READ COMMITTED`隔离级别下，一个事务在执行过程中每次执行SELECT操作时都会生成一个ReadView，ReadView的存在本身就保证了`事务不可以读取到未提交的事务所做的更改`，也就是避免了脏读现象；
@@ -65,21 +78,29 @@
 
 - 方案二：读、写操作都采用`加锁`的方式。
 
+  如果我们的一些业务场景不允许读取记录的旧版本，而是每次都必须去`读取记录的最新版本`。比如，在银行存款的事务中，你需要先把账户的余额读出来，然后将其加上本次存款的数额，最后再写到数据库中。在将账户余额读取出来后，就不想让别的事务再访问该余额，直到本次存款事务执行完成，其他事务才可以访问账户的余额。这样在读取记录的时候就需要对其进行`加锁`操作，这样也就意味着`读操作`和`写操作`也像`写-写操作`那样排队执行。
+
+  `脏读`的产生是因为当前事务读取了另一个未提交事务写的一条记录，如果另一个事务在写记录的时候就给这条记录加锁，那么当前事务就无法继续读取该记录了，所以也就不会有脏读问题的产生了。
+
+  `不可重复读`的产生是因为当前事务先读取一条记录，另外一个事务对该记录做了改动之后并提交之后，当前事务再次读取时会获得不同的值，如果在当前事务读取记录时就给该记录加锁，那么另一个事务就无法修改该记录，自然也不会发生不可重复读了。
+
+  `幻读`问题的产生是因为当前事务读取了一个范围的记录，然后另外的事务向该范围内插入了新记录，当前事务再次读取该范围的记录时发现了新插入的新记录。采用加锁的方式解决幻读问题就有一些麻烦，因为当前事务在第一次读取记录时幻影记录并不存在，所以读取的时候加锁就有点尴尬（因为你并不知道给谁加锁）。
+
 - 小结对比发现：
   - 采用`MVCC`方式的话，`读-写`操作彼此并不冲突，`性能更高`。
   - 采用`加锁`方式的话，`读-写`操作彼此需要`排队执行`，影响性能。
 
-一般情况下我们当然愿意采用MVCC来解决读-写操作并发执行的问题，但是业务在某些特殊情况下，要求必须采用`加锁`的方式执行。下面就讲解下MySQL中不同类别的锁。
+一般情况下我们当然愿意采用`MVCC`来解决`读-写`操作并发执行的问题，但是业务在某些特殊情况下，要求必须采用`加锁`的方式执行。下面就讲解下MySQL中不同类别的锁。
 
 ## 3. 锁的不同角度分类
 
 锁的分类图，如下：
 
-![image-20220210194636422](images/image-20220210194636422.png)
+<img src="images/image-20220210194636422.png" alt="image-20220210194636422" style="zoom: 33%;" />
 
 ### 3. 1 从数据操作的类型划分：读锁、写锁
 
-对于数据库中并发事务的读-读情况并不会引起什么问题。对于写-写、读-写或写-读这些情况可能会引起一些问题，需要使用MVCC或者加锁的方式来解决它们。在使用加锁的方式解决问题时，由于既要允许读-读情况不受影响，又要使写一写、读-写或写-读情况中的操作相互阻塞，所以MySQL实现一个由两种类型的锁组成的锁系统来解决。这两种类型的锁通常被称为共享锁（Shared Lock，SLock）和排他锁（Exclusive Lock，XLock），也叫读锁（readlock）和写锁（write lock）。
+对于数据库中并发事务的`读-读`情况并不会引起什么问题。对于`写-写`、`读-写`或`写-读`这些情况可能会引起一些问题，需要使用`MVCC`或者`加锁`的方式来解决它们。在使用`加锁`的方式解决问题时，由于既要允许读-读情况不受影响，又要使`写一写`、读-写或`写-读`情况中的操作`相互阻塞`，所以MySQL实现一个由两种类型的锁组成的锁系统来解决。这两种类型的锁通常被称为**共享锁（Shared Lock，SLock）**和**排他锁（Exclusive Lock，XLock）**，也叫**读锁（readlock）**和**写锁（write lock）**。
 
 - `读锁`：也称为`共享锁`、英文用`S`表示。针对同一份数据，多个事务的读操作可以同时进行而不会互相影响，相互不阻塞的。
 
@@ -87,7 +108,7 @@
 
 **需要注意的是对于 InnoDB 引擎来说，读锁和写锁可以加在表上，也可以加在行上。**
 
-举例（行级读写锁）：如果一个事务T1已经获得了某个行r的读锁，那么此时另外的一个事务T2是可以去获得这个行r的读锁的，因为读取操作并没有改变行r的数据；但是，如果某个事务T3想获得行r的写锁，则它必须等待事务T1、T2释放掉行r上的读锁才行。
+**举例（行级读写锁）：**如果一个事务T1已经获得了某个行r的读锁，那么此时另外的一个事务T2是可以去获得这个行r的读锁的，因为读取操作并没有改变行r的数据；但是，如果某个事务T3想获得行r的写锁，则它必须等待事务T1、T2释放掉行r上的读锁才行。
 
 总结：这里的兼容是指对同一张表或记录的锁的兼容性情况。
 
@@ -123,21 +144,27 @@
   - 那么NOWAIT会立即报错返回
   - 而SKIP LOCKED也会立即返回，只是返回的结果中不包含被锁定的行。
 
+
+
 #### 2. 写操作
 
 平常所用到的写操作无非是`DELETE`、`UPDATE`、`INSERT`这三种：
 
 - `DELETE`
 
-  对一条记录做DELETE操作的过程其实是先在B+树中定位到这条记录的位置，然后获取这条记录的X锁，再执行delete mark操作。我们也可以把这个定位待删除记录在B+树中位置的过程看成是一个获取X锁的锁定读。
+  对一条记录做DELETE操作的过程其实是先在`B+树`中定位到这条记录的位置，然后获取这条记录的`X锁`，再执行`delete mark`操作。我们也可以把这个定位待删除记录在B+树中位置的过程看成是一个获取`X锁`的`锁定读`。
 
 - `UPDATE`：在对一条记录做UPDATE操作时分为三种情况：
 
   - 情况1：未修改该记录的键值，并且被更新的列占用的存储空间在修改前后未发生变化。
-    则先在B+树中定位到这条记录的位置，然后再获取一下记录的x锁，最后在原记录的位置进行修改操作。我们也可以把这个定位待修改记录在B+树中位置的过程看成是一个获取X锁的锁定读。
+    
+    则先在`B+树`中定位到这条记录的位置，然后再获取一下记录的`x锁`，最后在原记录的位置进行修改操作。我们也可以把这个定位待修改记录在`B+树`中位置的过程看成是一个获取`X锁`的`锁定读`。
+    
   - 情况2：未修改该记录的键值，并且至少有一个被更新的列占用的存储空间在修改前后发生变化。
-    则先在B+树中定位到这条记录的位置，然后获取一下记录的x锁，将该记录彻底删除掉（就是把记录彻底移入垃圾链表），最后再插入一条新记录。这个定位待修改记录在B+树中位置的过程看成是一个获取X锁的锁定读，新插入的记录由INSERT操作提供的隐式锁进行保护。
-  - 情况3：修改了该记录的键值，则相当于在原记录上做`DELETE`操作之后再来一次`INSERT`操作，加锁操作就需要按照DELETE和INSERT的规则进行了。
+    
+     则先在B+树中定位到这条记录的位置，然后获取一下记录的`x锁`，将该记录彻底删除掉（就是把记录彻底移入垃圾链表），最后再插入一条新记录。这个定位待修改记录在`B+树`中位置的过程看成是一个获取`X锁`的`锁定读`，新插入的记录由`INSERT`操作提供的`隐式锁`进行保护。
+    
+  - 情况3：修改了该记录的键值，则相当于在原记录上做`DELETE`操作之后再来一次`INSERT`操作，加锁操作就需要按照`DELETE`和`INSERT`的规则进行了。
 
 - `INSERT`
 
@@ -153,18 +180,28 @@
 
 #### 1. 表锁（Table Lock）
 
-该锁会锁定整张表，它是MySQL中最基本的锁策略，并`不依赖于存储引擎`（不管你是MySQL的什么存储引擎，对于表锁的策略都是一样的），并且表锁是开销最小的策略（因为粒度比较大）。由于表级锁一次会将整个表锁定，所以可以很好的`避免死锁`问题。当然，锁的粒度大所带来最大的负面影响就是出现锁资源争用的概率也会最高，导致`并发率大打折扣`。
+该锁会锁定整张表，它是MySQL中最基本的锁策略，并`不依赖于存储引擎`（不管你是MySQL的什么存储引擎，对于表锁的策略都是一样的），并且表锁是`开销最小`的策略（因为粒度比较大）。由于表级锁一次会将整个表锁定，所以可以很好的`避免死锁`问题。当然，锁的粒度大所带来最大的负面影响就是出现锁资源争用的概率也会最高，导致`并发率大打折扣`。
 
 ##### ① 表级别的S锁、X锁
 
 在对某个表执行SELECT、INSERT、DELETE、UPDATE语句时，InnoDB存储引擎是不会为这个表添加表级别的`S锁`或者`X锁`的。在对某个表执行一些诸如`ALTER TABLE`、`DROP TABLE`这类的`DDL`语句时，其他事务对这个表并发执行诸如SELECT、INSERT、DELETE、UPDATE的语句会发生阻塞。同理，某个事务中对某个表执行SELECT、INSERT、DELETE、UPDATE语句时，在其他会话中对这个表执行`DDL`语句也会发生阻塞。这个过程其实是通过在`server层`使用一种称之为`元数据锁`（英文名：`Metadata Locks`，简称`MDL`）结构来实现的。
 
-一般情况下，不会使用InnoDB存储引擎提供的表级别的`S锁`和`X锁`。只会在一些特殊情况下，比方说`崩溃恢复`过程中用到。比如，在系统变量`autocommit=0，innodb_table_locks = 1`时，手动获取InnoDB存储引擎提供的表t 的`S锁`或者`X锁`可以这么写：
+一般情况下，不会使用InnoDB存储引擎提供的表级别的`S锁`和`X锁`。只会在一些特殊情况下，比方说`崩溃恢复`过程中用到。比如，在系统变量`autocommit=0，innodb_table_locks = 1`时，`手动`获取InnoDB存储引擎提供的表t 的`S锁`或者`X锁`可以这么写：
 
 - `LOCK TABLES t READ`：InnoDB存储引擎会对表`t`加表级别的`S锁`。
 - `LOCK TABLES t WRITE`：InnoDB存储引擎会对表`t`加表级别的`X锁`。
 
 不过尽量避免在使用InnoDB存储引擎的表上使用`LOCK TABLES`这样的手动锁表语句，它们并不会提供什么额外的保护，只是会降低并发能力而已。InnoDB的厉害之处还是实现了更细粒度的`行锁`，关于InnoDB表级别的`S锁`和`X锁`大家了解一下就可以了。
+
+```mysql
+# 查看锁定表
+show open tables;
+
+lock tables t read;
+lock tables t write;
+
+unlock tables;
+```
 
 **总结：**
 
@@ -180,15 +217,19 @@ MySQL的表级锁有两种模式：（以MyISAM表进行操作的演示）
 
 
 
-##### ② 意向锁 （intention lock）
+##### ② 意向锁 （intention lock） 
 
 InnoDB 支持`多粒度锁（multiple granularity locking`），它允许`行级锁`与`表级锁`共存，而 **意向锁** 就是其中的一种`表锁`。
 
 意向锁分为两种：
 
 1、意向锁的存在是为了协调行锁和表锁的关系，支持多粒度（表锁与行锁）的锁并存。
-2、意向锁是一种`不与行级锁冲突`表级锁，这一点非常重要。
+
+2、意向锁是一种`不与行级锁冲突表级锁`，这一点非常重要。
+
 3、表明“某个事务正在某些行持有了锁或该事务准备去持有锁”
+
+意向锁分为两种：  n
 
 - **意向共享锁** （intention shared lock, IS）：事务有意向对表中的某些行加 **共享锁** （S锁）
 
@@ -208,7 +249,7 @@ InnoDB 支持`多粒度锁（multiple granularity locking`），它允许`行级
 
 **1.意向锁要解决的问题**
 
-现在有两个事务，分别是T1和T2，其T2试图在该表级别上应用共享或排它锁，如果没有意向锁存在，那么T2就需要去检查各个页或行是否存在锁；如果存在意向锁，那么此时就会受到由T1控制的表级别意向锁的阻塞。T2在锁定该表前不必检查各个页或行锁，而只需检查表上的意向锁。简单来说就是给更大一级别的空间示意里面是否已经上过锁。
+现在有两个事务，分别是T1和T2，其T2试图在该表级别上应用共享或排它锁，如果没有意向锁存在，那么T2就需要去检查各个页或行是否存在锁；如果存在意向锁，那么此时就会受到由T1控制的`表级别意向锁的阻塞`。T2在锁定该表前不必检查各个页或行锁，而只需检查表上的意向锁。简单来说就是给更大一级别的空间示意里面是否已经上过锁。
 
 在数据表的场景中，**如果我们给某一行数据加上了排它锁，数据库会自动给更大一级的空间，比如数据页或数据表加上意向锁，告诉其他人这个数据页或数据表已经有人上过排它锁了**，这样当其他人想要获取数据表排它锁的时候，只需要了解是否有人已经获取了这个数据表的意向排他锁即可。
 
@@ -217,6 +258,22 @@ InnoDB 支持`多粒度锁（multiple granularity locking`），它允许`行级
 
 这时，意向锁会告诉其他事务已经有人锁定了表中的某些记录。
 
+**举例：**创建表teacher，插入6条数据，事务的隔离级别默认为`Repeatable-Read`，如下所示。
+
+```mysql
+CREATE TABLE 'teacher(
+id int NOT NULL,
+'name' varchar(255) NOT NULL, PRIMARY KEY('id')
+)ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+INSERT INTO teacher'VALUES
+('1','zhangsan'),
+(2','lisi'),
+('3','wangwu'),(4','zhaoliu'),
+('5','songhongkang'),
+('6','leifengyang');
+```
+
 ![image-20220219184248035](images/image-20220219184248035.png)
 
 **意向锁的并发性**
@@ -224,6 +281,10 @@ InnoDB 支持`多粒度锁（multiple granularity locking`），它允许`行级
 意向锁不会与行级的共享 / 排他锁互斥！正因为如此，意向锁并不会影响到多个事务对不同数据行加排他锁时的并发性。（不然我们直接用普通的表锁就行了）
 
 我们扩展一下上面 teacher表的例子来概括一下意向锁的作用（一条数据从被锁定到被释放的过程中，可能存在多种不同锁，但是这里我们只着重表现意向锁）。
+
+![image-20220315162319818](images/image-20220315162319818.png)
+
+
 
 **从上面的案例可以得到如下结论：**
 
@@ -277,7 +338,7 @@ mysql> select * from teacher;
 
 这些是“Simple inserts”语句但是指定部分新行的自动递增值。例如`INSERT INTO teacher (id,name)VALUES (1,'a'), (NULL,'b'), (5,'c'), (NULL,'d');`只是指定了部分id的值。另一种类型的“混合模式插入”是 `INSERT ... ON DUPLICATE KEY UPDATE`。
 
-对于上面数据插入的案例，MySQL中采用了自增锁的方式来实现，AUTO-INC锁是当向使用含有AUTO_INCREMENT列的表中插入数据时需要获取的一种特殊的表级锁，在执行插入语句时就在表级别加一个AUTO-INC锁，然后为每条待插入记录的AUTO_INCREMENT修饰的列分配递增的值，在该语句执行结束后，再把AUTO-INC锁释放掉。一个事务在持有AUTO-INC锁的过程中，其他事务的插入语句都要被阻塞，可以保证一个语句中分配的递增值是连续的。也正因为此，其并发性显然并不高，当我们向一个有AUTO_INCREMENT关键字的主键插入值的时候，每条语句都要对这个表锁进行竞争，这样的并发潜力其实是很低下的，所以innodb通过innodb_autoinc_lock_mode的不同取值来提供不同的锁定机制，来显著提高SQL语句的可伸缩性和性能。
+对于上面数据插入的案例，MySQL中采用了`自增锁`的方式来实现，**AUTO-INC锁是当向使用含有AUTO_INCREMENT列的表中插入数据时需要获取的一种特殊的表级锁**，在执行插入语句时就在表级别加一个AUTO-INC锁，然后为每条待插入记录的AUTO_INCREMENT修饰的列分配递增的值，在该语句执行结束后，再把AUTO-INC锁释放掉。**一个事务在持有AUTO-INC锁的过程中，其他事务的插入语句都要被阻塞**，可以保证一个语句中分配的递增值是连续的。也正因为此，其并发性显然并不高，**当我们向一个有AUTO_INCREMENT关键字的主键插入值的时候，每条语句都要对这个表锁进行竞争**，这样的并发潜力其实是很低下的，所以innodb通过`innodb_autoinc_lock_mode`的不同取值来提供不同的锁定机制，来显著提高SQL语句的可伸缩性和性能。
 
 innodb_autoinc_lock_mode有三种取值，分别对应与不同锁定模式：
 
@@ -297,7 +358,11 @@ innodb_autoinc_lock_mode有三种取值，分别对应与不同锁定模式：
 
 从 MySQL 8.0 开始，交错锁模式是`默认`设置。
 
+在这种锁定模式下，所有类INSERT语句都不会使用表级AUTO-INC锁，并且可以同时执行多个语句。这是最快和最可扩展的锁定模式，但是当使用基于语句的复制或恢复方案时，**从二进制日志重播SQL语句时，这是不安全的**。
+
 在此锁定模式下，自动递增值`保证`在所有并发执行的所有类型的insert语句中是`唯一`且`单调递增`的。但是，由于多个语句可以同时生成数字（即，跨语句交叉编号）， **为任何给定语句插入的行生成的值可能不是连续的。**
+
+如果执行的语句是“simple inserts”，其中要插入的行数已提前知道，除了“Mixed-mode inserts”之外，为单个语句生成的数字不会有间隙。然而，当执行“bulk inserts”时，在由任何给定语句分配的自动递增值中可能存在间隙。
 
 ##### ④ 元数据锁（MDL锁）
 
@@ -305,25 +370,57 @@ MySQL5.5引入了meta data lock，简称MDL锁，属于表锁范畴。MDL 的作
 
 因此，**当对一个表做增删改查操作的时候，加 MDL读锁；当要对表做结构变更操作的时候，加 MDL 写锁。**
 
-读锁之间不互斥，因此你可以有多个线程同时对一张表增删改查。读写锁之间、写锁之间是互斥的，用来保证变更表结构操作的安全性，解决了DML和DDL操作之间的一致性问题。不需要显式使用，在访问一个表的时候会被自动加上。
+读锁之间不互斥，因此你可以有多个线程同时对一张表增删改查。读写锁之间、写锁之间是互斥的，用来保证变更表结构操作的安全性，解决了DML和DDL操作之间的一致性问题。`不需要显式使用`，在访问一个表的时候会被自动加上。
 
+```mysql
+show processlist;
+```
 
+![image-20220315163957516](images/image-20220315163957516.png)
+
+**元数据锁可能带来的问题：**
+
+![image-20220315164334272](images/image-20220315164334272.png)
+
+我们可以看到session A会对表teacher加一个MDL读锁，之后session B要加MDL写锁会被blocked，因为sessionA的MDL读锁还没有释放，而sessionC要在表teacher上新申请MDL读锁的请求也会被 sessionB阻塞。前面我们说了，所有对表的增删改查操作都需要先申请MDL读锁，就都被阻塞，等于这个表现在完全不可读写了。
 
 #### 2. InnoDB中的行锁
 
-行锁（Row Lock）也称为记录锁，顾名思义，就是锁住某一行（某条记录row）。需要的注意的是，MySQL服务器层并没有实现行锁机制，行级锁只在存储引擎层实现。
+行锁（Row Lock）也称为记录锁，顾名思义，就是锁住某一行（某条记录row）。需要的注意的是，MySQL服务器层并没有实现行锁机制，**行级锁只在存储引擎层实现**。
 
-**优点**：锁定力度小，发生锁冲突概率低，可以实现的并发度高。
+**优点**：锁定粒度小，发生`锁冲突概率低`，可以实现的`并发度高`。
 
-**缺点**：对于锁的开销比较大，加锁会比较慢，容易出现死锁情况。
+**缺点**：对于`锁的开销比较大`，加锁会比较慢，容易出现`死锁`情况。
 
 InnoDB与MyISAM的最大不同有两点：一是支持事务（TRANSACTION）；二是采用了行级锁。
 
+```mysql
+CREATE TABLE student(
+	id INT, 
+    name VARCHAR(20), 
+    class varchar(10), 
+    PRIMARY KEY(id)
+)Engine=InnoDB CHARSET=utf8;
+
+INSERT INTO student VALUES
+（1，‘张三’，‘一班’）,
+（3，’李四’，‘一班’）,
+（8，’王五’，‘二班’）,
+（15，’赵六’，‘二班‘）,
+（20，’钱七’，‘三班’）;
+```
+
+student表中的聚簇索引的简图如下所示。
+
+![image-20220315164739263](images/image-20220315164739263.png)
+
+这里把B+树的索引结构做了一个超级简化，只把索引中的记录给拿了出来，下面看看都有哪些常用的行锁类型。
+
 ##### ① 记录锁（Record Locks）
 
-记录锁也就是仅仅把一条记录锁上，官方的类型名称为：`LOCK_REC_NOT_GAP`。比如我们把id值为 8 的那条记录加一个记录锁的示意图如图所示。仅仅是锁住了id值为 8 的记录，对周围的数据没有影响。
+记录锁也就是仅仅把一条记录锁上，官方的类型名称为：`LOCK_REC_NOT_GAP`。比如我们把id值为 8 的那条记录加一个记录锁的示意图如图所示。仅仅是锁住了id值为 8 的记录，对周围的数据没有影响。 
 
-![](images/image-20220210195810560.png)
+<img src="images/image-20220210195810560.png" style="zoom:80%;" />
 
 举例如下：
 
@@ -339,15 +436,44 @@ InnoDB与MyISAM的最大不同有两点：一是支持事务（TRANSACTION）；
 
 `MySQL`在`REPEATABLE READ`隔离级别下是可以解决幻读问题的，解决方案有两种，可以使用`MVCC`方案解决，也可以采用`加锁`方案解决。但是在使用加锁方案解决时有个大问题，就是事务在第一次执行读取操作时，那些幻影记录尚不存在，我们无法给这些`幻影记录`加上`记录锁`。InnoDB提出了一种称之为`Gap Locks`的锁，官方的类型名称为：`LOCK_GAP`，我们可以简称为`gap锁`。比如，把id值为 8 的那条记录加一个gap锁的示意图如下。
 
-![image-20220210195932424](images/image-20220210195932424.png)
+<img src="images/image-20220210195932424.png" alt="image-20220210195932424" style="zoom:80%;" />
 
 图中id值为 8 的记录加了gap锁，意味着`不允许别的事务在id值为 8 的记录前边的间隙插入新记录`，其实就是id列的值( 3 , 8 )这个区间的新记录是不允许立即插入的。比如，有另外一个事务再想插入一条id值为 4 的新记录，它定位到该条新记录的下一条记录的id值为 8 ，而这条记录上又有一个gap锁，所以就会阻塞插入操作，直到拥有这个gap锁的事务提交了之后，id列的值在区间( 3 , 8 )中的新记录才可以被插入。
 
-**gap锁的提出仅仅是为了防止插入幻影记录而提出的** 。
+**gap锁的提出仅仅是为了防止插入幻影记录而提出的。**虽然有`共享gap锁`和`独占gap锁`这样的说法，但是它们起到的作用是相同的。而且如果对一条记录加了gap锁（不论是共享gap锁还是独占gap锁），并不会限制其他事务对这条记录加记录锁或者继续加gap锁。
+
+![image-20220316150656578](images/image-20220316150656578.png)
+
+这里session2并不会被堵住。因为表里并没有id=5这个记录，因此session1加的是间隙锁（3，8）。而 session2也是在这个间隙加的间隙锁。它们有共同的目标，即：保护这个间隙，不允许插入值。但，它们之间是不冲突的。
+
+注意，给一条记录加了`gap锁`只是`不允许`其他事务往这条记录前边的间隙`插入新记录`，那对于最后一条记录之后的间隙，也就是student 表中id值为20的记录之后的间隙该咋办呢？也就是说给哪条记录加`gap锁`才能阻止其他事务插入`id`值在`（20，+oo）`这个区间的新记录呢？这时候我们在讲数据页时介绍的两条伪记录派上用场了：
+
+- `Infimum`记录，表示该页面中最小的记录。
+- `Supremum`记录，表示该页面中最大的记录。
+
+为了实现阻止其他事务插入id值在（20，+oo）这个区间的新记录，我们可以给索引中的最后一条记录，也就是id值为20的那条记录所在页面的Supremum记录加上一个gap锁，如图所示。
+
+<img src="images/image-20220316150834699.png" alt="image-20220316150834699" style="zoom:80%;" />
+
+```mysql
+SELECT *FROM performance_schema.data_locks\G
+```
+
+这样就可以阻止其他事务插入id值在（20，+oo）这个区间的新记录。
+
+间隙锁的引入，可能会导致同样的语句锁住更大的范围，这其实是影响了并发度的。下面的例子会产生`死锁`
+
+<img src="images/image-20220316151106141.png" alt="image-20220316151106141" style="zoom:67%;" />
+
+
 
 ##### ③ 临键锁（Next-Key Locks）
 
 有时候我们既想`锁住某条记录`，又想`阻止`其他事务在该记录前边的`间隙插入新记录`，所以InnoDB就提出了一种称之为`Next-Key Locks`的锁，官方的类型名称为：`LOCK_ORDINARY`，我们也可以简称为`next-key`锁。Next-Key Locks是在存储引擎`innodb`、事务级别在`可重复读`的情况下使用的数据库锁，innodb默认的锁就是Next-Key locks。
+
+<img src="images/image-20220316151833187.png" alt="image-20220316151833187" style="zoom:67%;" />
+
+`next-key锁`的本质就是一个`记录锁`和`一个gap锁`的合体，它既能保护该条记录，又能阻止别的事务将新记录插入被保护记录前边的`间隙`。
 
 ```mysql
 begin;
@@ -358,11 +484,22 @@ select * from student where id <= 8 and id > 3 for update;
 
 我们说一个事务在`插入`一条记录时需要判断一下插入位置是不是被别的事务加了`gap锁`（`next-key锁`也包含`gap锁`），如果有的话，插入操作需要等待，直到拥有`gap锁`的那个事务提交。但是 **InnoDB规定事务在等待的时候也需要在内存中生成一个锁结构** ，表明有事务想在某个`间隙`中`插入`新记录，但是现在在等待。InnoDB就把这种类型的锁命名为`Insert Intention Locks`，官方的类型名称为：`LOCK_INSERT_INTENTION`，我们称为`插入意向锁`。插入意向锁是一种`Gap锁`，不是意向锁，在insert操作时产生。
 
-插入意向锁是在插入一条记录行前，由 `INSERT 操作产生的一种间隙锁`。
+插入意向锁是在插入一条记录行前，`由INSERT操作产生的一种间隙锁`。该锁用以表示插入意向，当多个事务在同一区间（gap）插入位置不同的多条数据时，事务之间不需要互相等待。假设存在两条值分别为4和7的记录，两个不同的事务分别试图插入值为5和6的两条记录，每个事务在获取插入行上独占的（排他）锁前，都会获取（4，7）之间的间隙锁，但是因为数据行之间并`不冲突`，所以两个事务之间并不会产生冲突（阻塞等待）。总结来说，插入意向锁的特性可以分成两部分：
+
+（1）插入意向锁是一种特殊的间隙锁——间隙锁可以锁定开区间内的部分记录。
+（2）插入意向锁之间互不排斥，所以即使多个事务在同一区间插入多条记录，只要记录本身（主键、唯一索引）不冲突，那么事务之间就不会出现冲突等待。
+
+注意，虽然插入意向锁中含有意向锁三个字，但是它并不属于意向锁而属于间隙锁，因为意向锁是表锁而插入意向锁是`行锁`。
+
+比如，把id值为8的那条记录加一个插入意向锁的示意图如下：
+
+![image-20220316152929446](images/image-20220316152929446.png)
+
+比如，现在T1为id值为8的记录加了一个gap锁，然后T2和T3分别想向student表中插入id值分别为4、5的两条记录，所以现在为id值为8的记录加的锁的示意图就如下所示：
 
 ![image-20220219194849526](images/image-20220219194849526.png)
 
-事实上 **插入意向锁并不会阻止别的事务继续获取该记录上任何类型的锁。**
+从图中可以看到，由于T1持有gap锁，所以T2和T3需要生成一个插入意向锁的锁结构并且处于等待状态。当T1提交后会把它获取到的锁都释放掉，这样T2和T3就能获取到对应的插入意向锁了（本质上就是把插入意向锁对应锁结构的is_waiting属性改为false），T2和T3之间也并不会相互阻塞，它们可以同时获取到id值为8的插入意向锁，然后执行插入操作。事实上**插入意向锁并不会阻止别的事务继续获取该记录上任何类型的锁**。
 
 #### 3. 页锁
 
@@ -379,6 +516,42 @@ select * from student where id <= 8 and id > 3 for update;
 悲观锁是一种思想，顾名思义，就是很悲观，对数据被其他事务的修改持保守态度，会通过数据库自身的锁机制来实现，从而保证数据操作的排它性。
 
 悲观锁总是假设最坏的情况，每次去拿数据的时候都认为别人会修改，所以每次在拿数据的时候都会上锁，这样别人想拿这个数据就会`阻塞`直到它拿到锁（ **共享资源每次只给一个线程使用，其它线程阻塞，用完后再把资源转让给其它线程** ）。比如行锁，表锁等，读锁，写锁等，都是在做操作之前先上锁，当其他线程想要访问数据时，都需要阻塞挂起。Java中`synchronized`和`ReentrantLock`等独占锁就是悲观锁思想的实现。
+
+**秒杀案例1：**
+
+商品秒杀过程中，库存数量的减少，避免出现`超卖`的情况。比如，商品表中有一个字段为quantity表示当前该商品的库存量。假设商品为华为mate40，id为1001，quantity=100个。如果不使用锁的情况下，操作方法如下所示
+
+```mysql
+#第1步：查出商品库存
+select quantity from items where id=1001;
+#第2步：如果库存大于0，则根据商品信息生产订单
+insert into orders（item_id）values（1001）;
+#第3步：修改商品的库存，num表示购买数量
+update items set quantity=quantity-num where id=1001;
+```
+
+这样写的话，在并发量小的公司没有大的问题，但是如果在`高并发环境`下可能出现以下问题
+
+![image-20220316153901931](images/image-20220316153901931.png)
+
+其中线程B此时已经下单并且减完库存，这个时候线程A依然去执行step3，就造成了超卖。
+
+我们使用悲观锁可以解决这个问题，商品信息从查询出来到修改，中间有一个生成订单的过程，使用悲观锁的原理就是，当我们在查询items信息后就把当前的数据锁定，直到我们修改完毕后再解锁。那么整个过程中，因为数据被锁定了，就不会出现有第三者来对其进行修改了。而这样做的前提是**需要将要执行的SQL语句放在同一个事务中，否则达不到锁定数据行的目的**。
+
+修改如下：
+
+```mysql
+#第1步：查出商品库存
+select quantity from items where id=1001 for update;
+#第2步：如果库存大于8，则根据商品信息生产订单
+insert into orders（item_id）values（1001）;
+#第3步：修改商品的库存，num表示购买数量
+update items set quantity=quantity-num where id=1001;
+```
+
+`select..for update`是MySQL中悲观锁。此时在items表中，id为1001的那条数据就被我们锁定了，其他的要执行select quantity from items where id=1001 for update；语句的事务必须等本次事务提交之后才能执行。这样我们可以保证当前的数据不会被其它事务修改。
+
+注意，当执行select quantity from items where id=1001 for update；语句之后，如果在其他事务中执行select quantity from items where id=1001；语句，并不会受第一个事务的影响，仍然可以正常查询出数据。
 
 注意：**select..…for update语句执行过程中所有扫描的行都会被锁上，因此在MySQL中用悲观锁必须确定使用了索引，而不是全表扫描，否则将会把整个表锁住**。
 
@@ -398,27 +571,72 @@ select * from student where id <= 8 and id > 3 for update;
 
 你能看到乐观锁就是程序员自己控制数据并发操作的权限，基本是通过给数据行增加一个戳（版本号或者时间戳），从而证明当前拿到的数据是否最新。
 
+秒杀案例2
+
+依然使用上面秒杀的案例，执行流程如下
+
+```mysql
+#第1步：查出商品库存
+select quantity from items where id=1001;
+#第2步：如果库存大于0，则根据商品信息生产订单
+insert into orders（item_id）values（1001）;
+#第3步：修改商品的库存，num表示购买数量
+update items set quantity=quantity-num，version=version+1 where id=1001 and version= #{version};
+```
+
+注意，如果数据表是`读写分离`的，当matser表中写入的数据没有及时同步到slave表中时，会造成更新一直失败的问题。此时需要`强制读取master表`中的数据（即将select语句放到事务中即可，这时候查询的就是master主库了。）
+
+如果我们对同一条数据进行`频繁的修改`的话，那么就会出现这么一种场景，每次修改都只有一个事务能更新成功，在业务感知上面就有大量的失败操作。我们把代码修改如下：
+
+```mysql
+#第1步：查出商品库存I 
+select quantity from items where id=1001;
+#第2步：如果库存大于0，则根据商品信息生产订单
+insert into orders（item_id）values（1001）;
+#第3步：修改商品的库存，num表示购买数量
+update items set quantity=quantity-num where id=1001 and quantity-num>e;
+```
+
+这样就会使每次修改都能成功，而且不会出现超卖的现象。
+
 #### 3. 两种锁的适用场景
 
 从这两种锁的设计思想中，我们总结一下乐观锁和悲观锁的适用场景：
 
 1. `乐观锁`适合`读操作多`的场景，相对来说写的操作比较少。它的优点在于`程序实现`，`不存在死锁`问题，不过适用场景也会相对乐观，因为它阻止不了除了程序以外的数据库操作。
-
 2. `悲观锁`适合`写操作多`的场景，因为写的操作具有`排它性`。采用悲观锁的方式，可以在数据库层面阻止其他事务对该数据的操作权限，防止`读 - 写`和`写 - 写`的冲突。
+
+我们把乐观锁和悲观锁总结如下图所示。
+
+![image-20220316155314451](images/image-20220316155314451.png)
+
+
 
 ### 3. 4 按加锁的方式划分：显式锁、隐式锁
 
 #### 1. 隐式锁
 
-一个事务在执行INSERT操作时，如果即将插入的间隙已经被其他事务加了gap锁，那么本次INSERT操作会阻塞，并且当前事务会在该间隙土加一个插入意向锁，否则一般情况下INSERT操作是不加锁的。那如果一个事务首先插入了一条记录（此时并没有在内存生产与该记录关联的锁结构），然后另一个事务：
+一个事务在执行`INSERT`操作时，如果即将插入的`间隙`已经被其他事务加了`gap锁`，那么本次`INSERT`操作会阻塞，并且当前事务会在该间隙土加一个`插入意向锁`，否则一般情况下`INSERT`操作是不加锁的。那如果一个事务首先插入了一条记录（此时并没有在内存生产与该记录关联的锁结构），然后另一个事务：
 
+- 立即使用 `SELECT..LOCK IN SHARE MODE`语句读取这条记录，也就是要获取这条记录的`S锁`，或者使用`SELECT...FOR UPDATE`语句读取这条记录，也就是要获取这条记录的`x锁`，怎么办？
 
+  如果允许这种情况的发生，那么可能产生`脏读`问题。
 
+- 立即修改这条记录，也就是要获取这条记录的`x锁`，怎么办？
 
+  如果允许这种情况的发生，那么可能产生`脏写`问题。
+
+这时候我们前边提过的`事务id`又要起作用了。我们把聚簇索引和二级索引中的记录分开看一下：
 
 - **情景一**： 对于聚簇索引记录来说，有一个`trx_id`隐藏列，该隐藏列记录着最后改动该记录的`事务id`。那么如果在当前事务中新插入一条聚簇索引记录后，该记录的`trx_id`隐藏列代表的的就是当前事务的`事务id`，如果其他事务此时想对该记录添加`S锁`或者`X锁`时，首先会看一下该记录的`trx_id`隐藏列代表的事务是否是当前的活跃事务，如果是的话，那么就帮助当前事务创建一个`X锁`（也就是为当前事务创建一个锁结构，`is_waiting`属性是`false`），然后自己进入等待状态（也就是为自己也创建一个锁结构，`is_waiting`属性是`true`）。
 
-- **情景二**： 对于二级索引记录来说，本身并没有`trx_id`隐藏列，但是在二级索引页面的`Page Header`部分有一个`PAGE_MAX_TRX_ID`属性，该属性代表对该页面做改动的最大的`事务id`，如果PAGE_MAX_TRX_ID属性值小于当前最小的活跃事务id，那么说明对该页面做修改的事务都已经提交了，否则就需要在页面中定位到对应的二级索引记录，然后回表找到它对应的聚簇索引记录，然后再重复`情景一`的做法。
+- **情景二**： 对于二级索引记录来说，本身并没有`trx_id`隐藏列，但是在二级索引页面的`Page Header`部分有一个`PAGE_MAX_TRX_ID`属性，该属性代表对该页面做改动的最大的`事务id`，如果`PAGE_MAX_TRX_ID`属性值小于当前最小的活跃事务id，那么说明对该页面做修改的事务都已经提交了，否则就需要在页面中定位到对应的二级索引记录，然后回表找到它对应的聚簇索引记录，然后再重复`情景一`的做法。
+
+即：一个事务对新插入的记录可以不显式的加锁（生成一个锁结构），但是由于`事务id`的存在，相当于加了一个`隐式锁`。别的事务在对这条记录加`S锁`或者`X锁`时，由于`隐式锁`的存在，会先帮助当前事务生成一个锁结构，然后自己再生成一个锁结构后进入等待状态。隐式锁是一种`延迟加锁`的机制，从而来减少加锁的数量。
+
+隐式锁在实际内存对象中并不含有这个锁信息。只有当产生锁等待时，隐式锁转化为显式锁。
+
+InnoDB的insert操作，对插入的记录不加锁，但是此时如果另一个线程进行当前读，类似以下的用例，session2会锁等待session1，那么这是如何实现的呢？
 
 **session 1:**
 
@@ -509,9 +727,21 @@ Flush tables with read lock
 
 - 一种策略是，直接进入等待，直到超时。这个超时时间可以通过参数`innodb_lock_wait_timeout`来设置。
 
+  在InnoDB中，innodb_lock_wait_timeout的默认值是`50s`，意味着如果采用第一个策略，当出现死锁以后，第一个被锁住的线程要过50s才会超时退出，然后其他线程才有可能继续执行。对于在线服务来说，这个等待时间往往是无法接受的。
+
+  但是，我们又不可能直接把这个时间设置成一个很小的值，比如1s。这样当出现死锁的时候，确实很快就可以解开，但如果不是死锁，而是简单的锁等待呢？所以，超时时间设置太短的话，会出现很多误伤。
+
 - 另一种策略是，发起死锁检测，发现死锁后，主动回滚死锁链条中的某一个事务（将持有最少行级排他锁的事务进行回滚），让其他事务得以继续执行。将参数`innodb_deadlock_detect`设置为`on`，表示开启这个逻辑。
 
+  所以，正常情况下我们还是要采用第二种策略，即：主动死锁检测，而且`innodb_deadlock_detect`的默认值本身就是on。主动死锁检测在发生死锁的时候，是能够快速发现并进行处理的，但是它也是有额外负担的。
+
 **第二种策略的成本分析**
+
+你可以想象一下这个过程：每当一个事务被锁的时候，就要看看它所依赖的线程有没有被别人锁住，如此循环，最后判断是否出现了循环等待，也就是死锁。
+
+每个新来的被堵住的线程，都要判断会不会由于自己的加入导致了死锁，这是一个时间复杂度是O(n)的操作。假设有1000个并发线程要同时更新同一行，那么死锁检测操作就是100万这个量级的。虽然最终检测的结果是没有死锁，但是这期间要消耗大量的CPU资源。因此，你就会看到CPU利用率很高，但是每秒却执行不了几个事务。
+
+那怎么解决由这种`热点行更新`导致的性能问题呢？问题的症结在于，死锁检测要耗费大量的CPU资源。
 
 **方法 1 ：如果你能确保这个业务一定不会出现死锁，可以临时把死锁检测关掉。** 但是这种操作本身带有一定的风险，因为业务设计的时候一般不会把死锁当做一个严重错误，毕竟出现死锁了，就回滚，然后通过业务重试一般就没问题了，这是`业务无损`的。而关掉死锁检测意味着可能会出现大量的超时，这是`业务有损`的。
 
@@ -519,13 +749,28 @@ Flush tables with read lock
 
 这个并发控制要做在`数据库服务端`。如果你有中间件，可以考虑在`中间件实现`；甚至有能力修改MySQL源码的人，也可以做在MySQL里面。基本思路就是，对于相同行的更新，在进入引擎之前排队，这样在InnoDB内部就不会有大量的死锁检测工作了。
 
+进一步的思路：
+可以考虑通过将一行改成逻辑上的多行来减少锁冲突。比如，连锁超市账户总额的记录，可以考虑放到多条记录上。账户总额等于这多个记录的值的总和。
+
 ## 4. 锁的内存结构
 
+我们前边说对一条记录加锁的本质就是在内存中创建一个锁结构与之关联，那么是不是一个事务对多条记录加锁，就要创建多个锁结构呢？比如：
 
+```mysql
+#事务T1
+SELECT*FROM user LOCK IN SHARE MODE;
+```
+
+理论上创建多个`锁结构`没问题，但是如果一个事务要获取10000条记录的锁，生成10000个锁结构也太崩溃了！所以决定在对不同记录加锁时，如果符合下边这些条件的记录会放到一个`锁结构`中。
+
+- 在同一个事务中进行加锁操作
+- 被加锁的记录在同一个页面中
+- 加锁的类型是一样的
+- 等待状态是一样的
 
 `InnoDB`存储引擎中的`锁结构`如下：
 
-![image-20220210201520416](images/image-20220210201520416.png)
+<img src="images/image-20220210201520416.png" alt="image-20220210201520416" style="zoom: 50%;" />
 
 结构解析：
 
@@ -555,8 +800,7 @@ Flush tables with read lock
 
   - `n_bits`：对于行锁来说，一条记录就对应着一个比特位，一个页面中包含很多记录，用不同的比特位来区分到底是哪一条记录加了锁。为此在行锁结构的末尾放置了一堆比特位，这个`n_bits`属性代表使用了多少比特位。
 
-    > n_bits的值一般都比页面中记录条数多一些。主要是为了之后在页面中插入了新记录后
-    > 也不至于重新分配锁结构
+    > n_bits的值一般都比页面中记录条数多一些。主要是为了之后在页面中插入了新记录后 也不至于重新分配锁结构
 
 `4.type_mode`：
 
@@ -639,7 +883,7 @@ MySQL8.0删除了information_schema.INNODB_LOCKS，添加了`performance_schema.
 
 我们模拟一个锁等待的场景，以下是从这三张表收集的信息
 
-锁等待场景，我们依然使用记录锁中的案例，当事务 2 进行等待时，查询情况如下：
+锁等待场景，我们依然使用记录锁中的案例，当事务2 进行等待时，查询情况如下：
 
 （ 1 ）查询正在被锁阻塞的sql语句。
 
