--- a/mysql/高级篇/第16章_多版本并发控制.md
+++ b/mysql/高级篇/第16章_多版本并发控制.md
@@ -5,6 +5,8 @@
 
 MVCC （Multiversion Concurrency Control），多版本并发控制。顾名思义，MVCC 是通过数据行的多个版本管理来实现数据库的`并发控制`。这项技术使得在InnoDB的事务隔离级别下执行`一致性读`操作有了保证。换言之，就是为了查询一些正在被另一个事务更新的行，并且可以看到它们被更新之前的值，这样在做查询的时候就不用等待另一个事务释放锁。
 
+MVCC没有正式的标准，在不同的DBMS中MVCC的实现方式可能是不同的，也不是普遍使用的（大家可以参考相关的DBMS文档）。这里讲解lnnoDB中MVCC的实现机制（MySQL其它的存储引擎并不支持它）。
+
 ## 2. 快照读与当前读
 
 MVCC在MySQL InnoDB中的实现主要是为了提高数据库并发性能，用更好的方式去处理`读-写冲突`，做到即使有读写冲突时，也能做到`不加锁`，`非阻塞并发读`，而这个读指的就是`快照读`, 而非`当前读`。当前读实际上是一种加锁的操作，是悲观锁的实现。而MVCC本质是采用乐观锁思想的一种方式。
@@ -49,29 +51,35 @@ UPDATE student SET ...  # 排他锁
 
 我们知道事务有 4 个隔离级别，可能存在三种并发问题：
 
-![image-20220210204111221](images/image-20220210204111221.png)
+<img src="images/image-20220210204111221.png" alt="image-20220210204111221" style="zoom: 50%;" />
 
 在MySQL中，默认的隔离级别是可重复读，可以解决脏读和不可重复读的问题，如果仅从定义的角度来看，它并不能解决幻读问题。如果我们想要解决幻读问题，就需要采用串行化的方式，也就是将隔离级别提升到最高，但这样一来就会大幅降低数据库的事务并发能力。
 
 MVCC可以不采用锁机制，而是通过乐观锁的方式来解决不可重复读和幻读问题！它可以在大多数情况下替代行级锁，降低系统的开销。
 
-![image-20220210204119059](images/image-20220210204119059.png)
+<img src="images/image-20220210204119059.png" alt="image-20220210204119059" style="zoom:50%;" />
 
 ### 3. 2 隐藏字段、Undo Log版本链
 
-回顾一下undo日志的版本链，对于使用InnoDB存储引擎的表来说，它的聚簇索引记录中都包含两个必要的隐藏列。
+回顾一下undo日志的版本链，对于使用`InnoDB`存储引擎的表来说，它的聚簇索引记录中都包含两个必要的隐藏列。
 
 - `trx_id`：每次一个事务对某条聚簇索引记录进行改动时，都会把该事务的`事务id`赋值给`trx_id`隐藏列。
 
 - `roll_pointer`：每次对某条聚簇索引记录进行改动时，都会把旧的版本写入到`undo日志`中，然后这个隐藏列就相当于一个指针，可以通过它来找到该记录修改前的信息。
 
+  **举例：**student表数据如下
+  
+  <img src="images/image-20220316195120242.png" alt="image-20220316195120242" style="zoom:80%;" />
+  
+  假设插入该记录的`事务id`为`8`，那么此刻该条记录的示意图如下所示：
+  
   ![image-20220210204204367](images/image-20220210204204367.png)
 
 > insert undo只在事务回滚时起作用，当事务提交后，该类型的undo日志就没用了，它占用的UndoLog Segment也会被系统回收（也就是该undo日志占用的Undo页面链表要么被重用，要么被释放）。
 
 假设之后两个事务id分别为 `10` 、 `20` 的事务对这条记录进行`UPDATE`操作，操作流程如下：
 
-![image-20220210204256480](images/image-20220210204256480.png)
+<img src="images/image-20220210204256480.png" alt="image-20220210204256480" style="zoom: 80%;" />
 
 每次对记录进行改动，都会记录一条undo日志，每条undo日志也都有一个`roll_pointer`属性（`INSERT`操作对应的`undo日志`没有该属性，因为该记录并没有更早的版本），可以将这些undo日志都连起来，串成一个链表：
 
@@ -129,11 +137,14 @@ ReadView 就是事务A在使用MVCC机制进行快照读操作时产生的读视
 了解了这些概念之后，我们来看下当查询一条记录的时候，系统如何通过MVCC找到它：
 
 1. 首先获取事务自己的版本号，也就是事务 ID；
-
 2. 获取 ReadView；
 3. 查询得到的数据，然后与 ReadView 中的事务版本号进行比较；
 4. 如果不符合 ReadView 规则，就需要从 Undo Log 中获取历史快照；
 5. 最后返回符合规则的数据。
+
+如果某个版本的数据对当前事务不可见的话，那就顺着版本链找到下一个版本的数据，继续按照上边的步骤判断可见性，依此类推，直到版本链中的最后一个版本。如果最后一个版本也不可见的话，那么就意味着该条记录对该事务完全不可见，查询结果就不包含该记录。
+
+> InnoDB中，MVCC是通过Undo Log+Read View进行数据读取，Undo Log保存了历史快照，而Read View规则帮我们判断当前版本的数据是否可见。
 
 在隔离级别为读已提交（Read Committed）时，一个事务中的每一次 SELECT 查询都会重新获取一次Read View。
 
@@ -148,6 +159,12 @@ ReadView 就是事务A在使用MVCC机制进行快照读操作时产生的读视
 ![image-20220210204742504](images/image-20220210204742504.png)
 
 ## 5. 举例说明
+
+假设现在student表中只有一条由`事务id`为`8`的事务插入的一条记录：
+
+![image-20220316202420239](images/image-20220316202420239.png)
+
+MVCC只能在READ COMMITTED和REPEATABLE READ 两个隔离级别下工作。接下来看一下`READ COMMITTED`和`REPEATABLE READ` 所谓的生成ReadView的时机不同到底不同在哪里。
 
 ### 5. 1 READ COMMITTED隔离级别下
 
@@ -236,13 +253,17 @@ SELECT * FROM student WHERE id = 1 ; # 得到的列name的值为'王五'
 
 这个`SELECT2`的执行过程如下：
 
-步骤1：在执行`SELECT`语句时会又会单独生成一个`ReadView`，该ReadView的`trx-ids`列表的内容就是`[20]`，`up_1imit_id`为`20`，`low_limit_id`为`21`，`creator_trxid`为`0`。
+步骤1：在执行`SELECT`语句时会又会单独生成一个`ReadView`，该ReadView的`trx_ids`列表的内容就是`[20]`，`up_1imit_id`为`20`，`low_limit_id`为`21`，`creator_trxid`为`0`。
 
 步骤2：从版本链中挑选可见的记录，从图中看出，最新版本的列`name`的内容是`‘宋八’`，该版本的`trx_id`值为`20`，在`trx_ids`列表内，所以不符合可见性要求，根据`ro11_pointer`跳到下一个版本。
 
-步骤3：下一个版本的列`name`的内容是`‘钱七’`，该版本的`trxid`值为`20`，也在`trx_ids`列表内，所以也不符合要求，继续跳到下一个版本。
+步骤3：下一个版本的列`name`的内容是`‘钱七’`，该版本的`trx_id`值为`20`，也在`trx_ids`列表内，所以也不符合要求，继续跳到下一个版本。
 
-步骤4：下一个版本的列`name`的内容是`‘王五’`，该版本的`trxid`值为`10`，小于`ReadView`中的`up_limit_id`值`20`，所以这个版本是符合要求的，最后返回给用户的版本就是这条列`name`为`‘王五’`的记录。必英，
+步骤4：下一个版本的列`name`的内容是`‘王五’`，该版本的`trx_id`值为`10`，小于`ReadView`中的`up_limit_id`值`20`，所以这个版本是符合要求的，最后返回给用户的版本就是这条列`name`为`‘王五’`的记录。
+
+以此类推，如果之后`事务id`为`20`的记录也提交了，再次在使用`READ COMMITTED`隔离级别的事务中查询表`student`中id值为`1`的记录时，得到的结果就是‘`宋八`’了，具体流程我们就不分析了。
+
+> 强调：使用READ COMMITTED隔离级别的事务在每次查询开始时都会生成一个独立的ReadView。
 
 ### 5. 2 REPEATABLE READ隔离级别下
 
@@ -278,11 +299,11 @@ SELECT * FROM student WHERE id = 1 ; # 得到的列name的值为'张三'
 
 这个`SELECT1`的执行过程如下：
 
-步骤1：在执行`SELECT`语句时会先生成一个`ReadView`，ReadView的`trx_ids`列表的内容就是`[10，20]`，`up_limit_id`为`10`，`1ow_limit_id`为`21`，`creator_trx-id`为`0`。
+步骤1：在执行`SELECT`语句时会先生成一个`ReadView`，ReadView的`trx_ids`列表的内容就是`[10，20]`，`up_limit_id`为`10`，`1ow_limit_id`为`21`，`creator_trx_id`为`0`。
 
-步骤2：然后从版本链中挑选可见的记录，从图中看出，最新版本的列`name`的内容是`‘王五’`，该版本的`trxid`值为`10`，在`trx-ids`列表内，所以不符合可见性要求，根据`rol1_pointer`跳到下一个版本。
+步骤2：然后从版本链中挑选可见的记录，从图中看出，最新版本的列`name`的内容是`‘王五’`，该版本的`trx_id`值为`10`，在`trx_ids`列表内，所以不符合可见性要求，根据`rol1_pointer`跳到下一个版本。
 
-步骤3：下一个版本的列`name`的内容是`‘李四’`，该版本的`trx_id`值也为`10`，也在`trxids`列表内，所以也不符合要求，继续跳到下一个版本。
+步骤3：下一个版本的列`name`的内容是`‘李四’`，该版本的`trx_id`值也为`10`，也在`trx_ids`列表内，所以也不符合要求，继续跳到下一个版本。
 
 步骤4：下一个版本的列`name`的内容是`‘张三’`，该版本的`trx_id`值为`8`，小于`ReadView`中的`up_limit_id`值`10`，所以这个版本是符合要求的，最后返回给用户的版本就是这条列`name`为`‘张三’`的记录。
 
@@ -328,11 +349,11 @@ SELECT * FROM student WHERE id = 1 ; # 得到的列name的值仍为'张三'
 ```
 步骤1：因为当前事务的隔离级别为`REPEATABLE READ`，而之前在执行`SELECT1`时已经生成过`ReadView`了，所以此时直接复用之前的`ReadView`，之前的`ReadView`的`trx_ids`列表的内容就是`[10，20]`，`up_limit_id`为`10`，`1ow_limit_id`为`21`，`creator_trx_id`为`0`。
 
-步骤2：然后从版本链中挑选可见的记录，从图中可以看出，最新版本的列`name`的内容是`‘宋八’`，该版本的`trxid`值为`20`，在`trxids`列表内，所以不符合可见性要求，根据`rol1_pointer`跳到下一个版本。
+步骤2：然后从版本链中挑选可见的记录，从图中可以看出，最新版本的列`name`的内容是`‘宋八’`，该版本的`trxid`值为`20`，在`trx_ids`列表内，所以不符合可见性要求，根据`rol1_pointer`跳到下一个版本。
 
-步骤3：下一个版本的列`name`的内容是`‘钱七’`，该版本的`trx_id`值为`20`，也在`trxids`列表内，所以也不符合要求，继续跳到下一个版本。
+步骤3：下一个版本的列`name`的内容是`‘钱七’`，该版本的`trx_id`值为`20`，也在`trx_ids`列表内，所以也不符合要求，继续跳到下一个版本。
 
-步骤4：下一个版本的列`name`的内容是`‘王五”`，该版本的`trx-id`值为`10`，而`trx-ids`列表中是包含值为`10`的`事务id`的，所以该版本也不符合要求，同理下一个列`name`的内容是`‘李四’`的版本也不符合要求。继续跳到下一个版本。
+步骤4：下一个版本的列`name`的内容是`‘王五”`，该版本的`trx_id`值为`10`，而`trx_ids`列表中是包含值为`10`的`事务id`的，所以该版本也不符合要求，同理下一个列`name`的内容是`‘李四’`的版本也不符合要求。继续跳到下一个版本。
 
 步骤5：下一个版本的列`name`的内容是`张三’`，该版本的`trx_id`值为`80`，小于ReadView中的`up_limit_id`值`10`，所以这个版本是符合要求的，最后返回给用户的版本就是这条列`c`为`‘张三’`的记录。
 
@@ -351,7 +372,7 @@ SELECT * FROM student WHERE id = 1 ; # 得到的列name的值仍为'张三'
 步骤 1 ：事务 A 开始第一次查询数据，查询的 SQL 语句如下。
 
 ```mysql
-select * from student where id >= 1 ;
+select * from student where id >= 1;
 ```
 
 在开始查询之前，MySQL 会为事务 A 产生一个 ReadView，此时 ReadView 的内容如下：`trx_ids=[20,30]，up_limit_id=20，low_limit_id=31，creator_trx_id=20`。
