--- a/mysql/高级篇/第18章_主从复制.md
+++ b/mysql/高级篇/第18章_主从复制.md
@@ -6,19 +6,21 @@
 
 在实际工作中，我们常常将`Redis`作为缓存与`MySQL`配合来使用，当有请求的时候，首先会从缓存中进行查找，如果存在就直接取出。如果不存在再访问数据库，这样就`提升了读取的效率`，也减少了对后端数据库的`访问压力`。Redis的缓存架构是`高并发架构`中非常重要的一环。
 
-![image-20220211133114594](images/image-20220211133114594.png)
+<img src="images/image-20220211133114594.png" alt="image-20220211133114594" style="zoom:80%;" />
 
 此外，一般应用对数据库而言都是“`读多写少`”，也就说对数据库读取数据的压力比较大，有一个思路就是采用数据库集群的方案，做`主从架构`、进行`读写分离`，这样同样可以提升数据库的并发处理能力。但并不是所有的应用都需要对数据库进行主从架构的设置，毕竟设置架构本身是有成本的。
 
 如果我们的目的在于提升数据库高并发访问的效率，那么首先考虑的是如何`优化SQL和索引`，这种方式简单有效；其次才是采用`缓存的策略`，比如使用 Redis将热点数据保存在内存数据库中，提升读取的效率；最后才是对数据库采用`主从架构`，进行读写分离。
 
+按照上面的方式进行优化，使用和维护的成本是由低到高的。
+
 ### 1. 2 主从复制的作用
 
 主从同步设计不仅可以提高数据库的吞吐量，还有以下 3 个方面的作用。
 
-**第 1 个作用：读写分离。**
+**第1个作用：读写分离。**我们可以通过主从复制的方式来同步数据，然后通过读写分离提高数据库并发处理能力。
 
-![image-20220211133224805](images/image-20220211133224805.png)
+<img src="images/image-20220211133224805.png" alt="image-20220211133224805" style="zoom:80%;" />
 
 其中一个是Master主库，负责写入数据，我们称之为：写库。
 
@@ -56,7 +58,7 @@
 
 `从库 SQL 线程`会读取从库中的中继日志，并且执行日志中的事件，将从库中的数据与主库保持同步。
 
-![image-20220211133403943](images/image-20220211133403943.png)
+<img src="images/image-20220211133403943.png" alt="image-20220211133403943" style="zoom:80%;" />
 
 > 注意：
 >
@@ -424,7 +426,7 @@ seconds_behind_master的计算方法是这样的：
 
 ### 4. 2 主从延迟问题原因
 
-在网络正常的时候，日志从主库传给从库所需的时间是很短的，即T 2 - T 1 的值是非常小的。即，网络正常情况下，主备延迟的主要来源是备库接收完binlog和执行完这个事务之间的时间差。
+在网络正常的时候，日志从主库传给从库所需的时间是很短的，即T2 - T1 的值是非常小的。即，网络正常情况下，主备延迟的主要来源是备库接收完binlog和执行完这个事务之间的时间差。
 
 **主备延迟最直接的表现是，从库消费中继日志（relay log）的速度，比主库生产binlog的速度要慢。** 造成原因：
 
@@ -527,13 +529,15 @@ MGR 将 MySQL 带入了数据强一致性的时代，是一个划时代的创新
 ⑦ `MaxScale`是mariadb（MySQL原作者维护的一个版本） 研发的中间件
 ⑧ `MySQLRoute`是MySQL官方Oracle公司发布的中间件
 
-![image-20220211135840634](images/image-20220211135840634.png)
+<img src="images/image-20220211135840634.png" alt="image-20220211135840634" style="zoom:80%;" />
 
-![image-20220211135845791](images/image-20220211135845791.png)
+<img src="images/image-20220211135845791.png" alt="image-20220211135845791" style="zoom:80%;" />
 
 主备切换：
 
-![image-20220211135859963](images/image-20220211135859963.png)
+
+
+<img src="images/image-20220211135859963.png" alt="image-20220211135859963" style="zoom: 67%;" />
 
 - 主动切换
 
