--- a/mysql/高级篇/第15章_锁.md
+++ b/mysql/高级篇/第15章_锁.md
@@ -33,7 +33,7 @@
 - `trx信息`：代表这个锁结构是哪个事务生成的。
 - `is_waiting`：代表当前事是否在等待。
 
-当事务`T1`改动了这条记录后，就生成了一个`锁结构`与该记录关联，因为之前没有别的事务为这条记录加锁，所以`is_waiting` 属性就是fa`l`se，我们把这个场景就称之为`获取锁成功`，或者`加锁成功`，然后就可以继续执行操作了。
+当事务`T1`改动了这条记录后，就生成了一个`锁结构`与该记录关联，因为之前没有别的事务为这条记录加锁，所以`is_waiting` 属性就是`false`，我们把这个场景就称之为`获取锁成功`，或者`加锁成功`，然后就可以继续执行操作了。
 
 在事务`T1`提交之前，另一个事务`T2`也想对该记录做改动，那么先看看有没有`锁结构`与这条记录关联，发现有一个`锁结构`与之关联后，然后也生成了一个锁结构与这条记录关联，不过锁结构的`is_waiting` 属性值为`true`，表示当前事务需要等待，我们把这个场景就称之为`获取锁失败`，或者`加锁失败`，图示：
 
@@ -138,7 +138,7 @@
 
 **MySQL8.0新特性：**
 
-在5.7及之前的版本，SELECT.…FOR UPDATE，如果获取不到锁，会一直等待，直到`innodb_lock_wait_timeout`超时。在8.o版本中，SELECT…FOR UPDATE，SELECT.…FOR SHARE添加`NOWAIT`、`SKIP LOCKED`语法，跳过锁等待，或者跳过锁定。
+在5.7及之前的版本，SELECT.…FOR UPDATE，如果获取不到锁，会一直等待，直到`innodb_lock_wait_timeout`超时。在8.0版本中，SELECT…FOR UPDATE，SELECT.…FOR SHARE添加`NOWAIT`、`SKIP LOCKED`语法，跳过锁等待，或者跳过锁定。
 
 - 通过添加NOWAIT、SKIPLOCKED语法，能够立即返回。如果查询的行已经加锁：
   - 那么NOWAIT会立即报错返回
@@ -261,17 +261,19 @@ InnoDB 支持`多粒度锁（multiple granularity locking`），它允许`行级
 **举例：**创建表teacher，插入6条数据，事务的隔离级别默认为`Repeatable-Read`，如下所示。
 
 ```mysql
-CREATE TABLE 'teacher(
-id int NOT NULL,
-'name' varchar(255) NOT NULL, PRIMARY KEY('id')
+CREATE TABLE teacher(
+ id int NOT NULL,
+ name varchar(255) NOT NULL, 
+ PRIMARY KEY(id)
 )ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
 
-INSERT INTO teacher'VALUES
-('1','zhangsan'),
-(2','lisi'),
-('3','wangwu'),(4','zhaoliu'),
-('5','songhongkang'),
-('6','leifengyang');
+INSERT INTO teacher VALUES
+(1,'zhangsan'),
+(2,'lisi'),
+(3,'wangwu'),
+(4,'zhaoliu'),
+(5,'songhongkang'),
+(6,'leifengyang');
 ```
 
 ![image-20220219184248035](images/image-20220219184248035.png)
@@ -403,11 +405,11 @@ CREATE TABLE student(
 )Engine=InnoDB CHARSET=utf8;
 
 INSERT INTO student VALUES
-（1，‘张三’，‘一班’）,
-（3，’李四’，‘一班’）,
-（8，’王五’，‘二班’）,
-（15，’赵六’，‘二班‘）,
-（20，’钱七’，‘三班’）;
+(1,'张三','一班'),
+(3,'李四','一班'),
+(8,'王五','二班'),
+(15,'赵六','二班'),
+(20,'钱七','三班');
 ```
 
 student表中的聚簇索引的简图如下所示。
@@ -594,7 +596,7 @@ select quantity from items where id=1001;
 #第2步：如果库存大于0，则根据商品信息生产订单
 insert into orders（item_id）values（1001）;
 #第3步：修改商品的库存，num表示购买数量
-update items set quantity=quantity-num where id=1001 and quantity-num>e;
+update items set quantity=quantity-num where id=1001 and quantity-num>0;
 ```
 
 这样就会使每次修改都能成功，而且不会出现超卖的现象。
