--- a/mysql/高级篇/第16章_多版本并发控制.md
+++ b/mysql/高级篇/第16章_多版本并发控制.md
@@ -202,7 +202,7 @@ SELECT * FROM student WHERE id = 1 ; # 得到的列name的值为'张三'
 
 步骤1：在执行`SELECT`语句时会先生成一个`ReadView`，ReadView的`trx_ids`列表的内容就是`[10，20]`，`up_limit_id`为`10`，`low_limit_id`为`21`，`creator_trx_id`为`0`。
 
-步骤2：从版本链中挑选可见的记录，从图中看出，最新版本的列`name`的内容是`‘王五’`，该版本的`trx_id`值为`10`，在trx-ids列表内，所以不符合可见性要求，根据`ro11_pointer`跳到下一个版本。
+步骤2：从版本链中挑选可见的记录，从图中看出，最新版本的列`name`的内容是`‘王五’`，该版本的`trx_id`值为`10`，在`trx_ids`列表内，所以不符合可见性要求，根据`ro11_pointer`跳到下一个版本。
 
 步骤3：下一个版本的列`name`的内容是`‘李四’`，该版本的`trx_id`值也为`10`，也在`trxids`列表内，所以也不符合要求，继续跳到下一个版本。
 
