--- a/mysql/高级篇/第03章_用户与权限管理.md
+++ b/mysql/高级篇/第03章_用户与权限管理.md
@@ -693,8 +693,8 @@ mysql> SHOW GRANTS FOR 'manager';
 
 再举例：来看看库管角色的权限：
 
-```
-mysq1>SHOW GRANTS FOR ' stocker'; 
+```mysql
+mysq1>SHOW GRANTS FOR 'stocker'; 
 +-------------------------------------------------------+
 | Grants for stocker@% I I GRANT USAGE ON *.* TO stocker@%|
 | GRANT SELECT ON' demo. goodsmaster' TO stocker@%|
@@ -812,11 +812,11 @@ SET DEFAULT ROLE ALL TO
   ```mysql
   mysql> show variables like 'activate_all_roles_on_login';
   +-----------------------------+-------+
-  | Variable_name | Value |
+  | Variable_name               | Value |
   +-----------------------------+-------+
-  | activate_all_roles_on_login | OFF |
+  | activate_all_roles_on_login | OFF   |
   +-----------------------------+-------+
-  1 row in set (0.00 sec)
+  1 row in set (0.04 sec)
   ```
 
 - 设置：
