--- a/mysql/高级篇/第04章_逻辑架构.md
+++ b/mysql/高级篇/第04章_逻辑架构.md
@@ -56,23 +56,23 @@
 - **Parser: 解析器**
 
   - 在解析器中对 SQL 语句进行语法分析、语义分析。将SQL语句分解成数据结构，并将这个结构传递到后续步骤，以后SQL语句的传递和处理就是基于这个结构的。如果在分解构成中遇到错误，那么就说明这个SQL语句是不合理的。
-  - 在SQL命令传递到解析器的时候会被解析器验证和解析，并为其创建`语法树`，并根据数据字典丰富查询语法树，会`验证该客户端是否具有执行该查询的权限`。创建好语法树后，MySQL还会对SQl查询进行语法上的优化，进行查询重写。
+  - 在SQL命令传递到解析器的时候会被解析器验证和解析，并为其创建`语法树`，并根据数据字典丰富查询语法树，会`验证该客户端是否具有执行该查询的权限`。创建好语法树后，MySQL还会对SQL查询进行语法上的优化，进行查询重写。
 
 - **Optimizer: 查询优化器**
   
-- SQL语句在语法解析之后、查询之前会使用查询优化器确定 SQL 语句的执行路径，生成一个`执行计划`。
+  - SQL语句在语法解析之后、查询之前会使用查询优化器确定 SQL 语句的执行路径，生成一个`执行计划`。
+    
+  - 这个执行计划表明应该`使用哪些索引`进行查询（全表检索还是使用索引检索），表之间的连接顺序如何，最后会按照执行计划中的步骤调用存储引擎提供的方法来真正的执行查询，并将查询结果返回给用户。
+    
+  - 它使用“`选取-投影-连接`”策略进行查询。例如：
   
-- 这个执行计划表明应该`使用哪些索引`进行查询（全表检索还是使用索引检索），表之间的连接顺序如何，最后会按照执行计划中的步骤调用存储引擎提供的方法来真正的执行查询，并将查询结果返回给用户。
-  
-- 它使用“`选取-投影-连接`”策略进行查询。例如：
-  
-    ```mysql
-    SELECT id,name FROM student WHERE gender = '女';
+  ```mysql
+  SELECT id,name FROM student WHERE gender = '女';
   ```
   
   这个SELECT查询先根据WHERE语句进行`选取`，而不是将表全部查询出来以后再进行gender过滤。 
-    
-    这个SELECT查询先根据id和name进行属性`投影`，而不是将属性全部取出以后再进行过滤，将这两个查询条件`连接`起来生成最终查询结果。
+  
+  这个SELECT查询先根据id和name进行属性`投影`，而不是将属性全部取出以后再进行过滤，将这两个查询条件`连接`起来生成最终查询结果。
   
 - **Caches & Buffers： 查询缓存组件**
 
@@ -443,7 +443,7 @@ Oracle 和 MySQL 在进行 SQL 的查询上面有软件实现层面的差异。O
 
 了解了缓冲池的作用之后，我们还需要了解缓冲池的另一个特性：`预读`。
 
-缓冲池的作用就是提升I/0效率，而我们进行读取数据的时候存在一个“局部性原理”，也就是说我们使用了一些数据，`大概率还会使用它周围的一些数据`，因此采用“预读”的机制提前加载，可以减少未来可能的磁盘I/0操作。
+缓冲池的作用就是提升I/O效率，而我们进行读取数据的时候存在一个“局部性原理”，也就是说我们使用了一些数据，`大概率还会使用它周围的一些数据`，因此采用“预读”的机制提前加载，可以减少未来可能的磁盘I/0操作。
 
 
 #### 2. 查询缓存
@@ -526,7 +526,7 @@ innodb_buffer_pool_size/innodb_buffer_pool_instances
 
 也就是总共的大小除以实例的个数，结果就是每个`Buffer Pool`实例占用的大小。
 
-不过也不是说Buffer Pool实例创建的越多越好，分别`管理各个BufferPoo1也是需要性能开销的`，lnnoDB规定：当innodb_buffer_pool_size的值小于1G的时候设置多个实例是无效的，InnoDB会默认把`innodb_buffer_pool_instances`的值修改为1。而我们鼓励在Buffer Pool大于或等于1G的时候设置多个Buffer Pool实例。
+不过也不是说Buffer Pool实例创建的越多越好，分别`管理各个BufferPool也是需要性能开销的`，lnnoDB规定：当innodb_buffer_pool_size的值小于1G的时候设置多个实例是无效的，InnoDB会默认把`innodb_buffer_pool_instances`的值修改为1。而我们鼓励在Buffer Pool大于或等于1G的时候设置多个Buffer Pool实例。
 
 ### 3.5 引申问题
 
