--- a/mysql/高级篇/第09章_性能分析工具的使用.md
+++ b/mysql/高级篇/第09章_性能分析工具的使用.md
@@ -54,7 +54,8 @@ SHOW [GLOBAL|SESSION] STATUS LIKE '参数';
 - Innodb_rows_deleted：执行DELETE操作删除的行数 
 - Com_select：查询操作的次数。 
 - Com_insert：插入操作的次数。对于批量插入的 INSERT 操作，只累加一次。 
-- Com_update：更新操作的次数。 • Com_delete：删除操作的次数。
+- Com_update：更新操作的次数。 
+-  Com_delete：删除操作的次数。
 
 ## 3. 统计SQL的查询成本：last_query_cost
 
