--- a/mysql/高级篇/第09章_性能分析工具的使用.md
+++ b/mysql/高级篇/第09章_性能分析工具的使用.md
@@ -721,6 +721,7 @@ CALL insert_s2( 10001 , 10000 );
 我们写的查询语句一般都以`SELECT`关键字开头，比较简单的查询语句里只有一个`SELECT`关键字，比如下边这个查询语句：
 
 ```mysql
+#id：在一个大的查询语句中每个SELECT关键字都对应一个唯一的id
 SELECT * FROM s1 WHERE key1 = 'a';
 ```
 
@@ -738,11 +739,10 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a';
 ![image-20220209154025098](images/image-20220209154025098.png)
 
 ```mysql
+#s1:驱动表  s2:被驱动表
 mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 ```
 ![image-20220209154055722](images/image-20220209154055722.png)
-
-
 
 ```mysql
 mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN (SELECT key1 FROM s2) OR key3 = 'a';
@@ -750,11 +750,13 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN (SELECT key1 FROM s2) OR key3 = 'a
 ![image-20220209154125745](images/image-20220209154125745.png)
 
 ```mysql
+######查询优化器可能对涉及子查询的查询语句进行重写,转变为多表查询的操作########
 mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN (SELECT key2 FROM s2 WHERE common_field= 'a');
 ```
 ![image-20220209154141131](images/image-20220209154141131.png)
 
 ```mysql
+#Union去重
 mysql> EXPLAIN SELECT * FROM s1 UNION SELECT * FROM s2;
 ```
 ![image-20220209154159225](images/image-20220209154159225.png)
@@ -784,6 +786,7 @@ MySQL为每一个SELECT关键字代表的小查询都定义了一个称之为sel
 具体分析如下：
 
 ```mysql
+# 查询语句中不包含`UNION`或者子查询的查询都算作是`SIMPLE`类型
 mysql> EXPLAIN SELECT * FROM s1;
 ```
 
@@ -792,6 +795,7 @@ mysql> EXPLAIN SELECT * FROM s1;
 当然，连接查询也算是`SIMPLE`类型，比如：
 
 ```mysql
+#连接查询也算是`SIMPLE`类型
 mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 ```
 
@@ -800,20 +804,38 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 - `PRIMARY`
 
   ```mysql
+  #对于包含`UNION`或者`UNION ALL`或者子查询的大查询来说，它是由几个小查询组成的，其中最左边的那个查询的`select_type`值就是`PRIMARY`
   mysql> EXPLAIN SELECT * FROM s1 UNION SELECT * FROM s2;
   ```
 
   ![image-20220209154442420](images/image-20220209154442420.png)
 
-  
-
 - `UNION`
 
+  ```mysql
+  #对于包含`UNION`或者`UNION ALL`的大查询来说，它是由几个小查询组成的，其中除了最左边的那个小查询以外，其余的小查询的`select_type`值就是`UNION`
+  #`MySQL`选择使用临时表来完成`UNION`查询的去重工作，针对该临时表的查询的`select_type`就是`UNION RESULT`
+  EXPLAIN SELECT * FROM s1 UNION SELECT * FROM s2;
+  ```
+
+  ![image-20220323135307813](images/image-20220323135307813.png)
+
+  ```mysql
+  EXPLAIN SELECT * FROM s1 UNION ALL SELECT * FROM s2;
+  ```
+
+  ![image-20220323135340714](images/image-20220323135340714.png)
+
 - `UNION RESULT`
+
+  ![image-20220323135307813](images/image-20220323135307813.png)
 
 - `SUBQUERY`
 
   ```mysql
+  #子查询：
+  #如果包含子查询的查询语句不能够转为对应的`semi-join`的形式，并且该子查询是不相关子查询。
+  #该子查询的第一个`SELECT`关键字代表的那个查询的`select_type`就是`SUBQUERY`
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN (SELECT key1 FROM s2) OR key3 = 'a';
   ```
 
@@ -822,7 +844,10 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 - `DEPENDENT SUBQUERY`
 
   ```mysql
+  #如果包含子查询的查询语句不能够转为对应的`semi-join`的形式，并且该子查询是相关子查询，
+  #则该子查询的第一个`SELECT`关键字代表的那个查询的`select_type`就是`DEPENDENT SUBQUERY`
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN (SELECT key1 FROM s2 WHERE s1.key 2 =s2.key 2 ) OR key3 = 'a';
+  #注意的是，select_type为`DEPENDENT SUBQUERY`的查询可能会被执行多次。
   ```
 
   ![image-20220209154628089](images/image-20220209154628089.png)
@@ -830,6 +855,7 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 - `DEPENDENT UNION`
 
   ```mysql
+  #在包含`UNION`或者`UNION ALL`的大查询中，如果各个小查询都依赖于外层查询的话，那除了最左边的那个小查询之外，其余的小查询的`select_type`的值就是`DEPENDENT UNION`。
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN (SELECT key1 FROM s2 WHERE key1 ='a' UNION SELECT key1 FROM s1 WHERE key1 = 'b');
   ```
 
@@ -838,6 +864,7 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 - `DERIVED`
 
   ```mysql
+  #对于包含`派生表`的查询，该派生表对应的子查询的`select_type`就是`DERIVED`
   mysql> EXPLAIN SELECT * FROM (SELECT key1, count(*) as c FROM s1 GROUP BY key1) AS derived_s1 where c > 1 ;
   ```
 
@@ -846,6 +873,7 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 - `MATERIALIZED`
 
   ```mysql
+  #当查询优化器在执行包含子查询的语句时，选择将子查询物化之后与外层查询进行连接查询时，该子查询对应的`select_type`属性就是`MATERIALIZED`
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN (SELECT key1 FROM s2);
   ```
 
@@ -886,6 +914,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 #### 5. type ☆
 
+执行计划的一条记录就代表着MySQL对某个表的`执行查询时的访问方法`，又称“访问类型”，其中的`type`列就表明了这个访问方法是啥，是较为重要的一个指标。比如，看到`type`列的值是`ref`，表明`MySQL`即将使用`ref`访问方法来执行对`s1`表的查询。
+
 完整的访问方法如下：`system`，`const`，`eq_ref`，`ref`，`fulltext`，`ref_or_null`，`index_merge`，`unique_subquery`，`index_subquery`，`range`，`index`，`ALL`。
 
 我们详细解释一下：
@@ -915,14 +945,16 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
   当我们根据主键或者唯一二级索引列与常数进行等值匹配时，对单表的访问方法就是`const`
 
   ```mysql
-  mysql> EXPLAIN SELECT * FROM s1 WHERE id = 10005 ;
+  EXPLAIN SELECT * FROM s1 WHERE id = 10005;
+  
+  EXPLAIN SELECT * FROM s1 WHERE key2 = 10066;
   ```
 
   ![image-20220209155221917](images/image-20220209155221917.png)
 
 - `eq_ref`
 
-  在连接查询时，如果被驱动表是通过主键或者唯一二级索引列等值匹配的方式进行访问的（如果该主键或者唯一二级索引是联合索引的话，所有的索引列都必须进行等值比较），则对该被驱动表的访问方法就是`eq_ref`
+  在连接查询时，如果`被驱动表是通过主键或者唯一二级索引列等值匹配的`方式进行访问的（如果该主键或者唯一二级索引是联合索引的话，所有的索引列都必须进行等值比较），则对该被驱动表的访问方法就是`eq_ref`
 
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2 ON s1.id = s2.id;
@@ -930,7 +962,7 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
   ![image-20220209155245845](images/image-20220209155245845.png)
 
-  从执行计划的结果中可以看出，MySQL打算将s2 作为驱动表，s1 作为被驱动表，重点关注s 1 的访问方法是`eq_ref`，表明在访问s1 表的时候可以`通过主键的等值匹配`来进行访问。
+  从执行计划的结果中可以看出，MySQL打算将s2 作为驱动表，s1 作为被驱动表，重点关注s1 的访问方法是`eq_ref`，表明在访问s1 表的时候可以`通过主键的等值匹配`来进行访问。
 
 - `ref`
 
@@ -988,7 +1020,7 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 - `range`
 
-  如果使用索引获取某些范围区间的记录，那么就可能使用到`range`访问方法
+  如果使用索引获取某些`范围区间`的记录，那么就可能使用到`range`访问方法
 
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN ('a', 'b', 'c');
@@ -1006,7 +1038,7 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 - `index`
 
-  当我们可以使用索引覆盖，I但需要扫描全部的索引记录时，该表的访问方法就是`index`
+  当我们可以使用索引覆盖，但需要扫描全部的索引记录时，该表的访问方法就是`index`
 
   ```mysql
   mysql> EXPLAIN SELECT key_part2 FROM s1 WHERE key_part3 = 'a';
@@ -1029,6 +1061,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 **其中比较重要的几个提取出来（见上图中的蓝色）。SQL 性能优化的目标：至少要达到 range 级别，要求是 ref 级别，最好是 consts级别。（阿里巴巴开发手册要求）**
 
 #### 6. possible_keys和key
+
+在EXPLAIN语句输出的执行计划中，`possible_keys`列表示在某个查询语句中，对某个表执行`单表查询时可能用到的索引`有哪些。一般查询涉及到的字段上若存在索引，则该索引将被列出，但不一定被查询使用。`key`列表示`实际用到的索引`有哪些，如果为NULL，则没有使用索引。比方说下边这个查询：
 
 ```mysql
 mysql> EXPLAIN SELECT * FROM s1 WHERE key1 > 'z' AND key3 = 'a';
@@ -1074,8 +1108,7 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key_part1 = 'a' AND key_part2 = 'b';
 **key_len的长度计算公式：**
 
 ```mysql
-varchar(10)变长字段且允许NULL = 10 * ( character set：
-utf8=3,gbk=2,latin1=1)+1(NULL)+2(变长字段)
+varchar(10)变长字段且允许NULL = 10 * ( character set：utf8=3,gbk=2,latin1=1)+1(NULL)+2(变长字段)
 
 varchar(10)变长字段且不允许NULL = 10 * ( character set：utf8=3,gbk=2,latin1=1)+2(变长字段)
 
@@ -1125,6 +1158,7 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 > 'z' AND common_field = 'a';
 ![image-20220209160318032](images/image-20220209160318032.png)
 
 ```mysql
+#对于单表查询来说，这个filtered列的值没什么意义，我们`更关注在连接查询中驱动表对应的执行计划记录的filtered值`，它决定了被驱动表要执行的次数(即：rows * filtered)
 mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2 ON s1.key 1 = s2.key 1 WHERE s1.common_field = 'a';
 ```
 
@@ -1132,7 +1166,11 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2 ON s1.key 1 = s2.key 1 WHERE s1.co
 
 #### 11. Extra ☆
 
- 
+顾名思义，`Extra`列是用来说明一些额外信息的，包含不适合在其他列中显示但十分重要的额外信息。我们可以通过这些额外信息来`更准确的理解MySQL到底将如何执行给定的查询语句`。MySQL提供的额外信息有好几十个，我们就不一个一个介绍了，所以我们只挑比较重要的额外信息介绍给大家。
+
+- `No tables used`
+
+  当查询语句的没有FROM子句时将会提示该额外信息，比如：
 
 ```mysql
 mysql> EXPLAIN SELECT 1 ;
@@ -1142,25 +1180,24 @@ mysql> EXPLAIN SELECT 1 ;
 
 - `Impossible WHERE`
 
-  
-
   ```mysql
+#查询语句的`WHERE`子句永远为`FALSE`时将会提示该额外信息
   mysql> EXPLAIN SELECT * FROM s1 WHERE 1 != 1 ;
   ```
-
-  ![image-20220209160441479](images/image-20220209160441479.png)
-
+  
+![image-20220209160441479](images/image-20220209160441479.png)
+  
 - `Using where`
 
   ```mysql
+  #当我们使用全表扫描来执行对某个表的查询，并且该语句的`WHERE`子句中有针对该表的搜索条件时，在`Extra`列中会提示上述额外信息。
   mysql> EXPLAIN SELECT * FROM s1 WHERE common_field = 'a';
-  ```
-
-  
-
-  ![image-20220209160457894](images/image-20220209160457894.png)
-
 ```
+  
+![image-20220209160457894](images/image-20220209160457894.png)
+
+```mysql
+#当使用索引访问来执行对某个表的查询，并且该语句的`WHERE`子句中有除了该索引包含的列之外的其他搜索条件时，在`Extra`列中也会提示上述额外信息。
 mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 ```
 
@@ -1169,6 +1206,7 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `No matching min/max row`
 
   ```mysql
+  #当查询列表处有`MIN`或者`MAX`聚合函数，但是并没有符合`WHERE`子句中的搜索条件的记录时，将会提示该额外信息
   mysql> EXPLAIN SELECT MIN(key1) FROM s1 WHERE key1 = 'abcdefg';
   ```
 
@@ -1177,6 +1215,9 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `Using index`
 
   ```mysql
+  #当我们的查询列表以及搜索条件中只包含属于某个索引的列，也就是在可以
+  #使用覆盖索引的情况下，在`Extra`列将会提示该额外信息。比方说下边这个查询中只
+  #需要用到`idx_key1`而不需要回表操作
   mysql> EXPLAIN SELECT key1 FROM s1 WHERE key1 = 'a';
   ```
 
@@ -1185,11 +1226,13 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `Using index condition`
 
   ```mysql
+  #有些搜索条件中虽然出现了索引列，但却不能使用到索引
+  #看课件理解索引条件下推
   SELECT * FROM s1 WHERE key1 > 'z' AND key1 LIKE '%a';
   ```
 
   ```mysql
-  mysql> EXPLAIN SELECT * FROM s1 WHERE key1 > 'z' AND key1 LIKE '%b';
+  EXPLAIN SELECT * FROM s1 WHERE key1 > 'z' AND key1 LIKE '%b';
   ```
 
   ![image-20220209160804822](images/image-20220209160804822.png)
@@ -1197,6 +1240,8 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `Using join buffer (Block Nested Loop)`
 
   ```mysql
+  #在连接查询执行过程中，当被驱动表不能有效的利用索引加快访问速度，MySQL一般会为
+  #其分配一块名叫`join buffer`的内存块来加快查询速度，也就是我们所讲的`基于块的嵌套循环算法`
   mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2 ON s1.common_field =s2.common_field;
   ```
 
@@ -1205,6 +1250,8 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `Not exists`
 
   ```mysql
+  #当我们使用左（外）连接时，如果`WHERE`子句中包含要求被驱动表的某个列等于`NULL`值的搜索条件，
+  #而且那个列又是不允许存储`NULL`值的，那么在该表的执行计划的Extra列就会提示`Not exists`额外信息
   mysql> EXPLAIN SELECT * FROM s1 LEFT JOIN s2 ON s1.key 1 = s2.key 1 WHERE s2.id IS NULL;
   ```
 
@@ -1213,6 +1260,10 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `Using intersect(...)、Using union(...)和Using sort_union(...)`
 
   ```mysql
+  #如果执行计划的`Extra`列出现了`Using intersect(...)`提示，说明准备使用`Intersect`索引
+  #合并的方式执行查询，括号中的`...`表示需要进行索引合并的索引名称；
+  #如果出现了`Using union(...)`提示，说明准备使用`Union`索引合并的方式执行查询；
+  #出现了`Using sort_union(...)`提示，说明准备使用`Sort-Union`索引合并的方式执行查询。
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' OR key3 = 'a';
   ```
 
@@ -1221,6 +1272,7 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `Zero limit`
 
   ```mysql
+  #当我们的`LIMIT`子句的参数为`0`时，表示压根儿不打算从表中读出任何记录，将会提示该额外信息
   mysql> EXPLAIN SELECT * FROM s1 LIMIT 0 ;
   ```
 
@@ -1235,6 +1287,10 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
   ![image-20220209161022184](images/image-20220209161022184.png)
 
   ```mysql
+  #很多情况下排序操作无法使用到索引，只能在内存中（记录较少的时候）或者磁盘中（记录较多的时候）
+  #进行排序，MySQL把这种在内存中或者磁盘上进行排序的方式统称为文件排序（英文名：`filesort`）。
+  
+  #如果某个查询需要使用文件排序的方式执行查询，就会在执行计划的`Extra`列中显示`Using filesort`提示
   mysql> EXPLAIN SELECT * FROM s1 ORDER BY common_field LIMIT 10 ;
   ```
 
@@ -1243,6 +1299,10 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' AND common_field = 'a';
 - `Using temporary`
 
   ```mysql
+  #在许多查询的执行过程中，MySQL可能会借助临时表来完成一些功能，比如去重、排序之类的，比如我们
+  #在执行许多包含`DISTINCT`、`GROUP BY`、`UNION`等子句的查询过程中，如果不能有效利用索引来完成
+  #查询，MySQL很有可能寻求通过建立内部的临时表来执行查询。如果查询中使用到了内部的临时表，在执行
+  #计划的`Extra`列将会显示`Using temporary`提示
   mysql> EXPLAIN SELECT DISTINCT common_field FROM s1;
   ```
 
@@ -1375,8 +1435,7 @@ condition: (cast(s1.key 1 as double) = cast(s2.key 2 as double)) (cost=0.25 rows
 ### 7. 2 SHOW WARNINGS的使用
 
 ```mysql
-mysql> EXPLAIN SELECT s1.key 1 , s2.key 1 FROM s1 LEFT JOIN s2 ON s1.key 1 = s2.key 1 WHERE
-s2.common_field IS NOT NULL;
+mysql> EXPLAIN SELECT s1.key 1 , s2.key 1 FROM s1 LEFT JOIN s2 ON s1.key 1 = s2.key 1 WHERE s2.common_field IS NOT NULL;
 ```
 
 ![image-20220209162122556](images/image-20220209162122556.png)
