--- a/mysql/高级篇/第10章_索引优化与查询优化.md
+++ b/mysql/高级篇/第10章_索引优化与查询优化.md
@@ -223,8 +223,7 @@ EXPLAIN SELECT SQL_NO_CACHE * FROM student WHERE student.age=30 AND student.name
 
 EXPLAIN SELECT SQL_NO_CACHE * FROM student WHERE student.classid=1 AND student.name = 'abcd';
  
-EXPLAIN SELECT SQL_NO_CACHE * FROM student 
-WHERE classid=4 AND student.age=30 AND student.name = 'abcd'; 
+EXPLAIN SELECT SQL_NO_CACHE * FROM student WHERE classid=4 AND student.age=30 AND student.name = 'abcd'; 
 ```
 
 
@@ -1070,8 +1069,7 @@ EXPLAIN SELECT SQL_NO_CACHE * FROM student WHERE age = 30 AND stuno < 101000 ORD
 查询结果如下：
 
 ```mysql
-mysql>  SELECT SQL_NO_CACHE * FROM student WHERE age = 30 AND stuno < 101000 ORDER BY
-NAME ;
+mysql>  SELECT SQL_NO_CACHE * FROM student WHERE age = 30 AND stuno < 101000 ORDER BY NAME ;
 +---------+--------+--------+------+---------+
 | id | stuno | name | age | classId |
 +---------+--------+--------+------+---------+
@@ -1169,7 +1167,7 @@ CREATE INDEX idx_age_stuno ON student(age,stuno);
 - 由于单路是后出的，总体而言好过双路
 - 但是用单路有问题
   - 在sort_buffer中，单路比多路要多`占用很多空间`，因为单路是把所有字段都取出，所以有可能取出的数据的总大小超出了sort_buffer的容量，导致每次只能取`sort_buffer`容量大小的数据，进行排序（创建tmp文件，多路合并），排完再取sort_buffer容量大小，再排……从而多次IO。
-  - 单路本来想省一次/0操作，`反而导致了大量的I/0操作`，反而得不偿失。
+  - 单路本来想省一次IO操作，`反而导致了大量的I/O操作`，反而得不偿失。
 
 **优化策略**
 
