--- a/mysql/高级篇/第10章_索引优化与查询优化.md
+++ b/mysql/高级篇/第10章_索引优化与查询优化.md
@@ -1587,11 +1587,11 @@ SELECT * FROM A WHERE EXISTS(SELECT cc FROM B WHERE B. CC=A. cc)
 
 **环节1**：`COUNT（*）`和`COUNT（1）`都是对所有结果进行`COUNT`，`COUNT（*）`和`COUNT（1）`本质上并没有区别（二者执行时间可能略有差别，不过你还是可以把它俩的执行效率看成是相等的）。如果有WHERE子句，则是对所有符合筛选条件的数据行进行统计；如果没有WHERE子句，则是对数据表的数据行数进行统计。
 
-**环节2**：如果是MyISAM存储引擎，统计数据表的行数只需要`O（1）`的复杂度，这是因为每张MyISAM的数据表都有一个meta信息存储了`row_count`值，而一致性则由表级锁来保证。
+**环节2**：如果是MyISAM存储引擎，统计数据表的行数只需要`O(1)`的复杂度，这是因为每张MyISAM的数据表都有一个meta信息存储了`row_count`值，而一致性则由表级锁来保证。
 
-如果是InnoDB存储引擎，因为InnoDB支持事务，采用行级锁和MVCC机制，所以无法像MyISAM一样，维护一个row_count变量，因此需要采用`扫描全表`，是`O（n）`的复杂度，进行循环+计数的方式来完成统计。
+如果是InnoDB存储引擎，因为InnoDB支持事务，采用行级锁和MVCC机制，所以无法像MyISAM一样，维护一个row_count变量，因此需要采用`扫描全表`，是`O(n)`的复杂度，进行循环+计数的方式来完成统计。
 
-环节3：在InnoDB引擎中，如果采用`COUNT（具体字段）`来统计数据行数，要尽量采用二级索引。因为主键采用的索引是聚簇索引，聚簇索引包含的信息多，明显会大于二级索引（非聚簇索引）。对于`COUNT（*）`和`COUNT（1）`来说，它们不需要查找具体的行，只是统计行数，系统会`自动`采用占用空间更小的二级索引来进行统计。
+**环节3**：在InnoDB引擎中，如果采用`COUNT（具体字段）`来统计数据行数，要尽量采用二级索引。因为主键采用的索引是聚簇索引，聚簇索引包含的信息多，明显会大于二级索引（非聚簇索引）。对于`COUNT（*）`和`COUNT（1）`来说，它们不需要查找具体的行，只是统计行数，系统会`自动`采用占用空间更小的二级索引来进行统计。
 
 如果有多个二级索引，会使用key_len小的二级索引进行扫描。当没有二级索引的时候，才会采用主键索引来进行统计。
 
